--- a/android/res/values-sv/strings.xml
+++ b/android/res/values-sv/strings.xml
@@ -163,7 +163,7 @@
 	<!-- Settings button in system menu -->
 	<string name="settings">Inställningar</string>
 	<!-- Header of settings activity where user defines storage path -->
-	<string name="maps_storage">Kartlagring</string>
+	<string name="maps_storage">Spara kartor i</string>
 	<!-- Detailed description of Maps Storage settings button -->
 	<string name="maps_storage_summary">Välj en plats dit kartor ska laddas ner</string>
 	<!-- Question dialog for transferring maps from one storage to another -->
@@ -333,7 +333,7 @@
 	<string name="duration_6_hours">6 timmar</string>
 	<string name="duration_12_hours">12 timmar</string>
 	<string name="duration_1_day">1 dag</string>
-	<string name="recent_track_help_text">Obs: aktivering av denna funktion orsakar ökad batterianvändning.</string>
+	<string name="recent_track_help_text">Detta gör att du kan spara en resväg för en viss tidsperiod och visa den på kartan. Obs: aktivering av den här funktionen ökar batterianvändningen. Spåret tas bort automatiskt från kartan när tidsintervallet slutar gälla.</string>
 	<string name="pref_track_ios_caption">Senaste resväg visar den väg du rest.</string>
 	<string name="pref_track_ios_subcaption">Välj tidsintervall för att spara resvägen.</string>
 	<string name="placepage_distance">Avstånd</string>
@@ -788,6 +788,9 @@
 	<string name="onboarding_notifications_title">Aktivera avisering om uppdateringar</string>
 	<string name="onboarding_location_title">Hjälp oss att hitta dig</string>
 	<string name="onboarding_location_message">För att använda navigering och andra funktioner behöver vi tillgång till din geografiska plats.</string>
+	<string name="onboarding_permissions_title">Ge MAPS.ME åtkomst till lagring och plats</string>
+	<string name="onboarding_permissions_message">Så att du kan ladda ned kartor, visa platser och trafik i närheten och använda navigering.</string>
+	<string name="onboarding_welcome_title">Välkommen till MAPS.ME</string>
 	<string name="dialog_incorrect_feature_position">Ändra placering</string>
 	<string name="message_invalid_feature_position">Ett objekt kan inte placeras här</string>
 	<string name="login_to_make_edits_visible">Logga in så att andra användare kan se de ändringar du gjort.</string>
@@ -940,7 +943,7 @@
 	<!-- Text in menu -->
 	<string name="blog">Blogg</string>
 	<!-- Hint near allow statictics checkbox -->
-	<string name="allow_statistics_hint">Genom att samla användningsstatistik hjälper du oss att förbättra appen.</string>
+	<string name="allow_statistics_hint">Genom att samla in anonym användningsstatistik kan vi förbättra appen.</string>
 	<string name="general_settings">Allmänna inställningar</string>
 	<string name="date">Datum %d</string>
 	<!-- "Report a bug" -> "Generaal Feedback" -> "Something is not working" -->
@@ -1063,6 +1066,8 @@
 	<string name="whatsnew_smaller_mwm_message">Kartor kräver upp till 20 % mindre lagringsutrymme.</string>
 	<string name="whatsnew_waypoints_title">Vägpunkter i ruttning</string>
 	<string name="whatsnew_waypoints_message">Tryck på platser för att lägga till vägpunkter till din rutt.</string>
+	<string name="whatsnew_viator_title">Boka en tur</string>
+	<string name="whatsnew_viator_message">Välj populära turer i turiststäder över hela världen.</string>
 	<string name="whatsnew_driving_style_title">En ny kartstil när du kör</string>
 	<string name="whatsnew_driving_style_message">Bilens navigeringsläge är lättare att använda.</string>
 	<string name="more_on_bookingcom">Mer på Booking.com</string>
@@ -1095,4 +1100,42 @@
 	<string name="prefs_languages_information_off_link">Kolla in den här guiden för mer information.</string>
 	<string name="whatsnew_transliteration_title">Transkribering till latin</string>
 	<string name="whatsnew_transliteration_message">Om en gata eller ett objekt saknar ett namn på ditt språk kommer det att stavas med det latinska alfabetet.</string>
+	<string name="learn_more">Läs mer</string>
+	<string name="exit">Avsluta</string>
+	<string name="routing_add_start_point">Lägg till startpunkt för att planera en rutt.</string>
+	<string name="routing_add_finish_point">Lägg till slutpunkt för att planera en rutt.</string>
+	<string name="onboarding_welcome_message">Gratis, snabba, detaljerade och fullständiga kartor offline med sväng-för-sväng-navigering.</string>
+	<!-- нужно как-то выделять документы, чтобы привязать позже ссылки. -->
+	<string name="onboarding_welcome_agree">När du startar applikationen godkänner du våra användningsvillkor och sekretesspolicy.</string>
+	<string name="button_accept_and_continue">Godkänn och fortsätt</string>
+	<string name="button_learn_more">Läs mer</string>
+	<string name="onboarding_not_storage_permission_title">Bevilja åtkomst</string>
+	<string name="onboarding_not_storage_permission_message">Ändra behörighetsinställningarna på din enhet. Lagringsåtkomst krävs för att använda MAPS.ME.</string>
+	<string name="button_exit">Avsluta</string>
+	<string name="onboarding_learn_more_title">MAPS.ME behöver åtkomst till</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_learn_more_storage">Lagring</string>
+	<string name="onboarding_learn_more_storage_message">För att spara och använda nedladdade kartor offline och spara bokmärken.</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_location">Plats</string>
+	<string name="onboarding_learn_more_location_message">För att visa platser och trafik i närheten och använda navigering.</string>
+	<string name="onboarding_learn_more_save_maps_message">Du kan även ändra destination för nedladdade kartor i inställningarna.</string>
+	<string name="settings_device_memory">Enhetens minne</string>
+	<string name="settings_card_memory">Kortets minne</string>
+	<string name="settings_storage_available">%s tillgängligt</string>
+	<string name="toast_location_permission_denied">Behörighet till appens plats nekades</string>
+	<string name="place_page_viator_title">Attraktioner och turer</string>
+	<string name="planning_route_need_finish">Lägg till en destination för att planera en rutt.</string>
+	<string name="planning_route_need_start">Lägg till startpunkt för att planera en rutt.</string>
+	<string name="button_use">Använd</string>
+	<string name="planning_route_manage_route">Hantera rutt</string>
+	<string name="button_plan">Planera</string>
+	<string name="button_add">Lägg till</string>
+	<string name="placepage_remove_stop">Ta bort</string>
+	<string name="planning_route_remove_title">Dra här för att ta bort</string>
+	<string name="dialog_change_start_point_message">Ersätt startpunkt för den aktuella platsen?</string>
+	<string name="button_replace">Ersätt</string>
+	<string name="placepage_add_stop">Lägg till stopp</string>
+	<string name="whatsnew_intermediate_point_title">Ytterligare stopp</string>
+	<string name="whatsnew_intermediate_point_message">Planera rutter med ett uppehåll.</string>
 </resources>
