--- a/android/res/values-uk/strings.xml
+++ b/android/res/values-uk/strings.xml
@@ -167,7 +167,7 @@
 	<!-- Settings button in system menu -->
 	<string name="settings">Налаштування</string>
 	<!-- Header of settings activity where user defines storage path -->
-	<string name="maps_storage">Пам\'ять для карт</string>
+	<string name="maps_storage">Зберігати карти до</string>
 	<!-- Detailed description of Maps Storage settings button -->
 	<string name="maps_storage_summary">Виберіть місце, куди повинні бути завантажені карти</string>
 	<!-- Question dialog for transferring maps from one storage to another -->
@@ -337,7 +337,7 @@
 	<string name="duration_6_hours">6 годин</string>
 	<string name="duration_12_hours">12 годин</string>
 	<string name="duration_1_day">1 день</string>
-	<string name="recent_track_help_text">Примітка: активація цієї функції спричиняє підвищене використання заряду акумулятора.</string>
+	<string name="recent_track_help_text">Ця функція дозволяє прокласти подоланий маршрут протягом певного проміжку часу та переглянути його на карті. Звертаємо вашу увагу, що вмикання цієї функції пришвидшить розрядження акумулятора. Щойно сплине заданий проміжок часу, прокладений маршрут буде видалено з карти.</string>
 	<string name="pref_track_ios_caption">Останній маршрут показує пройдену відстань.</string>
 	<string name="pref_track_ios_subcaption">Будь ласка, виберіть проміжок часу для збереження маршруту.</string>
 	<string name="placepage_distance">Відстань</string>
@@ -788,6 +788,9 @@
 	<string name="onboarding_notifications_title">Дозвольте відправлення повідомлень</string>
 	<string name="onboarding_location_title">Допоможіть знайти вас</string>
 	<string name="onboarding_location_message">Щоб користуватися навігацією та іншими функціями додатку, нам необхідний доступ до вашого місцезнаходження.</string>
+	<string name="onboarding_permissions_title">Дозволити MAPS.ME доступ до сховища та функції визначення геолокації</string>
+	<string name="onboarding_permissions_message">Таким чином ви зможете завантажувати карти, переглядати місцевість і трафік, а також використовувати навігацію.</string>
+	<string name="onboarding_welcome_title">Вітаємо у MAPS.ME</string>
 	<string name="dialog_incorrect_feature_position">Змініть розташування</string>
 	<string name="message_invalid_feature_position">Об\'єкт не може перебувати в цьому місцезнаходженні</string>
 	<string name="login_to_make_edits_visible">Увійдіть, щоб ваші зміни побачили інші користувачі.</string>
@@ -940,7 +943,7 @@
 	<!-- Text in menu -->
 	<string name="blog">Блог</string>
 	<!-- Hint near allow statictics checkbox -->
-	<string name="allow_statistics_hint">Збір статистичної інформації про використання допомагає нам вдосконалювати наш додаток.</string>
+	<string name="allow_statistics_hint">Збір анонімної статистики про використання додатку допомагає нам вдосконалити додаток.</string>
 	<string name="general_settings">Загальні налаштування</string>
 	<string name="date">Дата %d</string>
 	<!-- "Report a bug" -> "Generaal Feedback" -> "Something is not working" -->
@@ -1063,6 +1066,8 @@
 	<string name="whatsnew_smaller_mwm_message">Тепер карти займають на 20% менше дискового простору.</string>
 	<string name="whatsnew_waypoints_title">Точки маршруту</string>
 	<string name="whatsnew_waypoints_message">Додавання точок до маршруту одним дотиком.</string>
+	<string name="whatsnew_viator_title">Забронювати екскурсію</string>
+	<string name="whatsnew_viator_message">На ваш вибір — популярні екскурсії в різних куточках світу.</string>
 	<string name="whatsnew_driving_style_title">Новий дизайн карт для водіїв</string>
 	<string name="whatsnew_driving_style_message">Режим навігації став ще простішим.</string>
 	<string name="more_on_bookingcom">Більше на Booking.com</string>
@@ -1095,4 +1100,42 @@
 	<string name="prefs_languages_information_off_link">Додаткову інформацію див. у цьому керівництві.</string>
 	<string name="whatsnew_transliteration_title">Транслітерація латинськими літерами</string>
 	<string name="whatsnew_transliteration_message">Якщо для вулиці чи об\'єкта відсутня назва українською мовою, використовуватиметься назва, транслітерована латинськими літерами.</string>
+	<string name="learn_more">Докладніше</string>
+	<string name="exit">Вихід</string>
+	<string name="routing_add_start_point">Вкажіть початкову точку для побудови маршруту.</string>
+	<string name="routing_add_finish_point">Вкажіть кінцеву точку для побудови маршруту.</string>
+	<string name="onboarding_welcome_message">Безкоштовні, швидкі, деталізовані та повністю офлайнові карти з покроковою навігацією.</string>
+	<!-- нужно как-то выделять документы, чтобы привязать позже ссылки. -->
+	<string name="onboarding_welcome_agree">Запускаючи цей додаток, ви погоджуєтеся з Умовами використання та Політикою конфіденційності.</string>
+	<string name="button_accept_and_continue">Прийняти та продовжити</string>
+	<string name="button_learn_more">Докладніше</string>
+	<string name="onboarding_not_storage_permission_title">Надати доступ</string>
+	<string name="onboarding_not_storage_permission_message">Внесіть зміни до прав доступу на вашому пристрої. Для використання MAPS.ME необхідно надати додатку права доступу до сховища.</string>
+	<string name="button_exit">Вихід</string>
+	<string name="onboarding_learn_more_title">MAPS.ME необхідно надати доступ до</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_learn_more_storage">Сховище</string>
+	<string name="onboarding_learn_more_storage_message">Для збереження та використання завантажених карт в автономному режимі, а також зберігання закладок.</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_location">Функція визначення геолокації</string>
+	<string name="onboarding_learn_more_location_message">Для перегляду місцевості та трафіку, а також використання навігації.</string>
+	<string name="onboarding_learn_more_save_maps_message">Також ви можете змінити місце зберігання завантажених карт у налаштуваннях.</string>
+	<string name="settings_device_memory">Вбудована пам\'ять</string>
+	<string name="settings_card_memory">Карта пам\'яті</string>
+	<string name="settings_storage_available">Доступно: %s</string>
+	<string name="toast_location_permission_denied">Відмовлено у доступі до функції визначення геолокації</string>
+	<string name="place_page_viator_title">Визначні пам\'ятки та екскурсії</string>
+	<string name="planning_route_need_finish">Вкажіть місце призначення для побудови маршруту.</string>
+	<string name="planning_route_need_start">Вкажіть початкову точку для побудови маршруту.</string>
+	<string name="button_use">Використовувати</string>
+	<string name="planning_route_manage_route">Редагування маршруту</string>
+	<string name="button_plan">Прокласти маршрут</string>
+	<string name="button_add">Додати</string>
+	<string name="placepage_remove_stop">Видалити</string>
+	<string name="planning_route_remove_title">Перетягніть сюди, щоб видалити</string>
+	<string name="dialog_change_start_point_message">Змінити початкову точку на поточне місцезнаходження?</string>
+	<string name="button_replace">Змінити</string>
+	<string name="placepage_add_stop">Додати зупинку</string>
+	<string name="whatsnew_intermediate_point_title">Додаткова зупинка</string>
+	<string name="whatsnew_intermediate_point_message">Прокласти маршрут з додатковою зупинкою посередині маршруту.</string>
 </resources>
