--- a/android/res/values-de/strings.xml
+++ b/android/res/values-de/strings.xml
@@ -167,7 +167,7 @@
 	<!-- Settings button in system menu -->
 	<string name="settings">Einstellungen</string>
 	<!-- Header of settings activity where user defines storage path -->
-	<string name="maps_storage">Kartenspeicher</string>
+	<string name="maps_storage">Karten speichern auf</string>
 	<!-- Detailed description of Maps Storage settings button -->
 	<string name="maps_storage_summary">Wählen Sie den Speicherort, an den die Karten heruntergeladen werden sollen</string>
 	<!-- Question dialog for transferring maps from one storage to another -->
@@ -339,7 +339,7 @@
 	<string name="duration_6_hours">6 Stunden</string>
 	<string name="duration_12_hours">12 Stunden</string>
 	<string name="duration_1_day">1 Tag</string>
-	<string name="recent_track_help_text">Bitte beachten: Die Aktivierung dieser Funktion führt zu erhöhtem Batterieverbrauch.</string>
+	<string name="recent_track_help_text">So können Sie die zurückgelegte Strecke für einen bestimmten Zeitraum aufzeichnen und auf der Karte sehen. Hinweis: Die Aktivierung dieser Funktion führt zu erhöhtem Batterieverbrauch. Die Aufzeichnung wird nach Ablauf des Zeitintervalls automatisch von der Karte entfernt.</string>
 	<string name="pref_track_ios_caption">Letzte Strecke zeigt den von Ihnen zurückgelegten Weg.</string>
 	<string name="pref_track_ios_subcaption">Bitte wählen Sie die Zeitspanne, für die die Strecke gespeichert wird.</string>
 	<string name="placepage_distance">Entfernung</string>
@@ -798,6 +798,9 @@
 	<string name="onboarding_notifications_title">Aktualisierungsbenachrichtigungen aktivieren</string>
 	<string name="onboarding_location_title">Helfen Sie uns dabei, Sie zu finden</string>
 	<string name="onboarding_location_message">Um Navigation und andere Funktionen zu verwenden, brauchen wir Zugriff auf Ihren Geo-Standort.</string>
+	<string name="onboarding_permissions_title">Erlauben Sie MAPS.ME, auf Speicher und Standort zuzugreifen</string>
+	<string name="onboarding_permissions_message">So können Sie Karten herunterladen, Orte und Verkehrslage in Ihrer Nähe sehen und die Navigation nutzen.</string>
+	<string name="onboarding_welcome_title">Willkommen bei MAPS.ME</string>
 	<string name="dialog_incorrect_feature_position">Standort wechseln</string>
 	<string name="message_invalid_feature_position">Ein Objekt kann hier nicht positioniert werden</string>
 	<string name="login_to_make_edits_visible">Melden Sie sich an, damit andere Benutzer Ihre Änderungen sehen können.</string>
@@ -950,7 +953,7 @@
 	<!-- Text in menu -->
 	<string name="blog">Blog</string>
 	<!-- Hint near allow statictics checkbox -->
-	<string name="allow_statistics_hint">Das Erfassen von Nutzungsstatistiken hilft uns beim Verbessern der App.</string>
+	<string name="allow_statistics_hint">Das Erfassen von anonymen Nutzungsstatistiken hilft uns beim Verbessern der App.</string>
 	<string name="general_settings">Allgemeine Einstellungen</string>
 	<string name="date">Datum %d</string>
 	<!-- "Report a bug" -> "Generaal Feedback" -> "Something is not working" -->
@@ -1073,6 +1076,8 @@
 	<string name="whatsnew_smaller_mwm_message">Karten benötigen bis zu 20 % weniger Speicherplatz.</string>
 	<string name="whatsnew_waypoints_title">Wegpunkte bei der Streckenführung</string>
 	<string name="whatsnew_waypoints_message">Tippen Sie auf Orte, um Wegpunkte zu Ihrer Route hinzuzufügen.</string>
+	<string name="whatsnew_viator_title">Tour buchen</string>
+	<string name="whatsnew_viator_message">Wählen Sie beliebte Touren in Touristenstädten auf der ganzen Welt.</string>
 	<string name="whatsnew_driving_style_title">Neuer Kartenstil zum Fahren</string>
 	<string name="whatsnew_driving_style_message">Der Modus Autonavigation ist jetzt einfacher zu nutzen.</string>
 	<string name="more_on_bookingcom">Mehr bei Booking.com</string>
@@ -1105,4 +1110,42 @@
 	<string name="prefs_languages_information_off_link">Weitere Informationen finden Sie in dieser Anleitung.</string>
 	<string name="whatsnew_transliteration_title">Transliteration ins Lateinische</string>
 	<string name="whatsnew_transliteration_message">Wenn eine Straße oder ein Objekt in Ihrer Sprache keinen Namen hat, wird er mit lateinischen Buchstaben geschrieben.</string>
+	<string name="learn_more">Weitere Informationen</string>
+	<string name="exit">Beenden</string>
+	<string name="routing_add_start_point">Fügen Sie einen Startpunkt hinzu, um eine Route zu planen.</string>
+	<string name="routing_add_finish_point">Fügen Sie ein Ziel hinzu, um eine Route zu planen.</string>
+	<string name="onboarding_welcome_message">Kostenlose, schnelle, detaillierte und vollständig offline benutzbare Karten mit genauer Navigation.</string>
+	<!-- нужно как-то выделять документы, чтобы привязать позже ссылки. -->
+	<string name="onboarding_welcome_agree">Durch das Starten der App stimmen Sie den Nutzungsbedingungen und der Datenschutzrichtlinie zu.</string>
+	<string name="button_accept_and_continue">Zustimmen und fortfahren</string>
+	<string name="button_learn_more">Weitere Informationen</string>
+	<string name="onboarding_not_storage_permission_title">Zugriff gewähren</string>
+	<string name="onboarding_not_storage_permission_message">Ändern Sie die Berechtigungseinstellungen auf Ihrem Gerät. Der Zugriff auf den Speicher muss gestattet werden, damit Sie MAPS.ME nutzen können.</string>
+	<string name="button_exit">Beenden</string>
+	<string name="onboarding_learn_more_title">MAPS.ME benötigt Zugriff auf</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_learn_more_storage">Speicher</string>
+	<string name="onboarding_learn_more_storage_message">Um heruntergeladene Karten offline zu speichern und zu nutzen und Lesezeichen zu speichern.</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_location">Standort</string>
+	<string name="onboarding_learn_more_location_message">Um Orte und Verkehrslage in Ihrer Nähe zu sehen und die Navigation zu nutzen.</string>
+	<string name="onboarding_learn_more_save_maps_message">Sie können auch das Ziel für heruntergeladene Karten in den Einstellungen ändern.</string>
+	<string name="settings_device_memory">Gerätespeicher</string>
+	<string name="settings_card_memory">Speicherkarte</string>
+	<string name="settings_storage_available">%s verfügbar</string>
+	<string name="toast_location_permission_denied">App-Zugriff auf Standort verweigert</string>
+	<string name="place_page_viator_title">Attraktionen und Touren</string>
+	<string name="planning_route_need_finish">Fügen Sie ein Ziel hinzu, um eine Route zu planen.</string>
+	<string name="planning_route_need_start">Fügen Sie einen Startpunkt hinzu, um eine Route zu planen.</string>
+	<string name="button_use">Nutzen</string>
+	<string name="planning_route_manage_route">Route verwalten</string>
+	<string name="button_plan">Planen</string>
+	<string name="button_add">Hinzufügen</string>
+	<string name="placepage_remove_stop">Entfernen</string>
+	<string name="planning_route_remove_title">Hierher ziehen zum Entfernen</string>
+	<string name="dialog_change_start_point_message">Startpunkt durch aktuellen Standort ersetzen?</string>
+	<string name="button_replace">Ersetzen</string>
+	<string name="placepage_add_stop">Zwischenstopp hinzufügen</string>
+	<string name="whatsnew_intermediate_point_title">Zusätzlicher Stopp</string>
+	<string name="whatsnew_intermediate_point_message">Planen Sie eine Route mit Zwischenstopp.</string>
 </resources>
