--- a/android/res/values-el/strings.xml
+++ b/android/res/values-el/strings.xml
@@ -119,7 +119,7 @@
 	<!-- Settings button in system menu -->
 	<string name="settings">Ρυθμίσεις</string>
 	<!-- Header of settings activity where user defines storage path -->
-	<string name="maps_storage">Αποθηκευτικό χώρος χαρτών</string>
+	<string name="maps_storage">Αποθήκευση χαρτών στο</string>
 	<!-- Detailed description of Maps Storage settings button -->
 	<string name="maps_storage_summary">Επιλέξτε από που θα γίνει λήψη χαρτών</string>
 	<!-- Question dialog for transferring maps from one storage to another -->
@@ -258,7 +258,7 @@
 	<string name="duration_6_hours">6 ώρες</string>
 	<string name="duration_12_hours">12 ώρες</string>
 	<string name="duration_1_day">1 ημέρα</string>
-	<string name="recent_track_help_text">Σημείωση: η ενεργοποίηση αυτής της λειτουργίας κάνει έντονη χρήση της μπαταρίας.</string>
+	<string name="recent_track_help_text">Σας επιτρέπει να καταγράψετε τη διαδρομή που έχει διανυθεί για συγκεκριμένο χρονικό διάστημα και να την δείτε στο χάρτη. Λάβετε υπόψη: η ενεργοποίηση αυτής της λειτουργίας κάνει έντονη χρήση της μπαταρίας. Το τμήμα θα αφαιρεθεί αυτόματα από το χάρτη μετά τη λήξη του μεσοδιαστήματος.</string>
 	<string name="search_show_on_map">Προβολή στο χάρτη</string>
 	<!-- Used to warn user when fixing KitKat issue -->
 	<string name="kitkat_migrate_ok">Ο αποθηκευτικός χώρος του χάρτη έχει βελτιστοποιηθεί. Κάντε επανεκκίνηση της εφαρμογής.\n\nΟ φάκελος MapsWithMe στο ριζικό κατάλογο της κάρτας SD δε χρειάζεται πλέον. Μπορείτε να το διαγράψετε.</string>
@@ -597,6 +597,9 @@
 	<string name="onboarding_notifications_title">Ενεργοποιήσετε τις ειδοποιήσεις για ενημερώσεις</string>
 	<string name="onboarding_location_title">Βοηθήστε μας να σας βρούμε</string>
 	<string name="onboarding_location_message">Προκειμένου να χρησιμοποιήσετε την πλοήγηση και τις άλλες λειτουργίες του MAPS.ME χρειάζεται πρόσβαση στη γεωγραφική σας θέση.</string>
+	<string name="onboarding_permissions_title">Να επιτραπεί στο MAPS.ME πρόσβαση στον αποθηκευτικό χώρο και την τοποθεσία</string>
+	<string name="onboarding_permissions_message">Μπορείτε να κατεβάσετε χάρτες, να δείτε μέρη και πληροφορίες για την κίνηση κοντά σε εσάς και να χρησιμοποιήσεττ την πλοήγηση.</string>
+	<string name="onboarding_welcome_title">Καλωσήρθατε στο MAPS.ME</string>
 	<string name="dialog_incorrect_feature_position">Αλλαγή τοποθεσίας</string>
 	<string name="message_invalid_feature_position">Δε μπορεί να εντοπιστεί αντικείμενο εδώ</string>
 	<string name="login_to_make_edits_visible">Συνδεθείτε ώστε άλλοι χρήστες να μπορούν να δουν τις αλλαγές που έχετε κάνει</string>
@@ -700,7 +703,7 @@
 	<!-- Text in menu -->
 	<string name="blog">Ιστολόγιο</string>
 	<!-- Hint near allow statictics checkbox -->
-	<string name="allow_statistics_hint">Η συλλογή στατιστικών στοιχείων χρήσης μας βοηθάει να βελτιώσουμε την εφαρμογή.</string>
+	<string name="allow_statistics_hint">Η συλλογή ανώνυμων στατιστικών στοιχείων μας βοηθά να βελτιώσουμε την εφαρμογή.</string>
 	<string name="general_settings">Γενικές ρυθμίσεις</string>
 	<string name="date">Ημερομηνία %d</string>
 	<!-- "Report a bug" -> "Generaal Feedback" -> "Something is not working" -->
@@ -823,6 +826,8 @@
 	<string name="whatsnew_smaller_mwm_message">Οι χάρτες απαιτούν 20% λιγότερο αποθηκευτικό χώρο.</string>
 	<string name="whatsnew_waypoints_title">Ενδιάμεσα σημεία στη διαδρομή</string>
 	<string name="whatsnew_waypoints_message">Πατήστε στα μέρη για να προσθέσετε ενδιάμεσα σημεία στη διαδρομή σας.</string>
+	<string name="whatsnew_viator_title">Κάντε κράτηση σε μια ξενάγηση</string>
+	<string name="whatsnew_viator_message">Επιλέξτε δημοφιλείς ξεναγήσεις σε τουριστικές πόλεις σε όλο τον κόσμο.</string>
 	<string name="whatsnew_driving_style_title">Νέο στυλ χάρτη για την οδήγηση</string>
 	<string name="whatsnew_driving_style_message">Ευκολότερη λειτουργία πλοήγησης αυτοκινήτου.</string>
 	<string name="more_on_bookingcom">Περισσότερα στο Booking.com</string>
@@ -855,4 +860,42 @@
 	<string name="prefs_languages_information_off_link">Για περισσότερες πληροφορίες δείτε αυτό τον οδηγό.</string>
 	<string name="whatsnew_transliteration_title">Μεταγραφή στα Λατινικά</string>
 	<string name="whatsnew_transliteration_message">Εάν ένας δρόμος ή ένα αντικείμενο δεν έχει όνομα στη γλώσσα σας, θα διατυπωθεί χρησιμοποιώντας το λατινικό αλφάβητο.</string>
+	<string name="learn_more">Μάθετε περισσότερα</string>
+	<string name="exit">Έξοδος</string>
+	<string name="routing_add_start_point">Προσθέστε αφετηρία για να σχεδιάσετε μια διαδρομή.</string>
+	<string name="routing_add_finish_point">Προσθέστε τελικό προορισμό, για να σχεδιάσετε μια διαδρομή.</string>
+	<string name="onboarding_welcome_message">Δωρεάν, γρήγοροι, λεπτομερείς χάρτες αποκλειστικά εκτός σύνδεσης με πλοήγηση αννά στροφή.</string>
+	<!-- нужно как-то выделять документы, чтобы привязать позже ссылки. -->
+	<string name="onboarding_welcome_agree">Με την εκκίνηση αυτής της εφαρμογής, συμφωνείτε με τους όρους χρήσης και την πολιτική προστασίας προσωπικών δεδομένων.</string>
+	<string name="button_accept_and_continue">Αποδοχή και συνέχεια</string>
+	<string name="button_learn_more">Μάθετε περισσότερα</string>
+	<string name="onboarding_not_storage_permission_title">Εκχώρηση άδειας</string>
+	<string name="onboarding_not_storage_permission_message">Αλλάξτε τις ρυθμίσεις άδειας στη συσκευή σας. Χρειάζεται πρόσβαση στον αποθηκευτικό χώρο για τη χρήση του MAPS.ME</string>
+	<string name="button_exit">Έξοδος</string>
+	<string name="onboarding_learn_more_title">Το MAPS.ME χρειάζεται πρόσβαση στο</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_learn_more_storage">Αποθηκευτικός χώρος</string>
+	<string name="onboarding_learn_more_storage_message">Για την αποθήκευση και τη χρήση των χαρτών εκτός σύνδεσης, και την αποθήκευση αγαπημένων.</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_location">Τοποθεσία</string>
+	<string name="onboarding_learn_more_location_message">Για την προβολή μερών και της κυκλοφορίας κοντά σας εσάς και τη χρήση της πλοήγησης.</string>
+	<string name="onboarding_learn_more_save_maps_message">Μπορείτε επίσης να αλλάξετε τον προορισμό για τους χάρτες που έχετε κατεβάσει από τις ρυθμίσεις.</string>
+	<string name="settings_device_memory">Μνήμη συσκευής</string>
+	<string name="settings_card_memory">Κάρτα μνήμης</string>
+	<string name="settings_storage_available">%s διαθέσιμα</string>
+	<string name="toast_location_permission_denied">Άρνηση πρόσβασης εφαρμογής στον εντοπισμό τοποθεσίας</string>
+	<string name="place_page_viator_title">Αξιοθέατα και περιηγήσεις</string>
+	<string name="planning_route_need_finish">Προσθέστε προορισμό για να σχεδιάσετε μια διαδρομή.</string>
+	<string name="planning_route_need_start">Προσθέστε αφετηρία για να σχεδιάσετε μια διαδρομή.</string>
+	<string name="button_use">Χρήση</string>
+	<string name="planning_route_manage_route">Διαχείριση διαδρομής</string>
+	<string name="button_plan">Σχέδιο</string>
+	<string name="button_add">Προσθήκη</string>
+	<string name="placepage_remove_stop">Κατάργηση</string>
+	<string name="planning_route_remove_title">Σύρετε εδώ για κατάργηση</string>
+	<string name="dialog_change_start_point_message">Θέλετε να αλλάξετε την αφετηρία στην τρέχουσα θέση;</string>
+	<string name="button_replace">Αλλαγή</string>
+	<string name="placepage_add_stop">Προσθήκη στάσης</string>
+	<string name="whatsnew_intermediate_point_title">Επιπλέον στάση</string>
+	<string name="whatsnew_intermediate_point_message">Σχεδιάστε μια διαδρομή με ενδιάμεσο προορισμό.</string>
 </resources>
