--- a/android/res/values-ko/strings.xml
+++ b/android/res/values-ko/strings.xml
@@ -163,7 +163,7 @@
 	<!-- Settings button in system menu -->
 	<string name="settings">설정</string>
 	<!-- Header of settings activity where user defines storage path -->
-	<string name="maps_storage">지도 저장소</string>
+	<string name="maps_storage">지도 저장 위치:</string>
 	<!-- Detailed description of Maps Storage settings button -->
 	<string name="maps_storage_summary">지도가 다운로드될 곳을 선택합니다</string>
 	<!-- Question dialog for transferring maps from one storage to another -->
@@ -327,7 +327,7 @@
 	<string name="duration_6_hours">6시간</string>
 	<string name="duration_12_hours">12시간</string>
 	<string name="duration_1_day">1일</string>
-	<string name="recent_track_help_text">참고: 이 기능의 활성화는 증가된 배터리 사용량의 원인이 됩니다.</string>
+	<string name="recent_track_help_text">특정 기간 동안 이동된 경로를 기록하고 지도에서 그 경로를 볼 수 있습니다. 참고: 이 기능을 활성화하면 배터리 사용량이 증가하게 됩니다. 시간 간격이 만료된 후 지도에서 해당 트랙이 자동으로 제거됩니다.</string>
 	<string name="pref_track_ios_caption">최근 추적은 여행한 경로를 보여줍니다.</string>
 	<string name="pref_track_ios_subcaption">추적을 저장하는 시간 범위를 선택하십시오.</string>
 	<string name="placepage_distance">거리</string>
@@ -780,6 +780,9 @@
 	<string name="onboarding_notifications_title">업데이트 알림 활성화</string>
 	<string name="onboarding_location_title">사용자를 찾도록 돕기</string>
 	<string name="onboarding_location_message">탐색 및 기타 기능을 사용하려면, 위치 정보에 액세스해야 합니다.</string>
+	<string name="onboarding_permissions_title">저장소 및 위치에 대한 MAPS.ME 액세스 허용</string>
+	<string name="onboarding_permissions_message">따라서 지도를 다운로드하고, 근처의 장소와 교통 상황을 보고, 네비게이션을 사용할 수 있습니다.</string>
+	<string name="onboarding_welcome_title">MAPS.ME입니다.</string>
 	<string name="dialog_incorrect_feature_position">위치 변경</string>
 	<string name="message_invalid_feature_position">목적지를 이곳에서 찾을 수 없습니다</string>
 	<string name="login_to_make_edits_visible">로그인하여 다른 사용자가 변경한 내용을 볼 수 있도록 하십시오.</string>
@@ -932,7 +935,7 @@
 	<!-- Text in menu -->
 	<string name="blog">블로그</string>
 	<!-- Hint near allow statictics checkbox -->
-	<string name="allow_statistics_hint">사용량 통계 수집을 통해 앱을 개선할 수 있습니다.</string>
+	<string name="allow_statistics_hint">익명의 사용 통계를 수집하면 앱을 개선하는 데 도움이 됩니다.</string>
 	<string name="general_settings">일반 설정</string>
 	<string name="date">날짜 %d</string>
 	<!-- "Report a bug" -> "Generaal Feedback" -> "Something is not working" -->
@@ -1055,6 +1058,8 @@
 	<string name="whatsnew_smaller_mwm_message">지도가 저장소를 최대 20% 적게 필요로 합니다.</string>
 	<string name="whatsnew_waypoints_title">경로의 중간 지점</string>
 	<string name="whatsnew_waypoints_message">경로에 중간 지점을 추가할 위치를 탭하세요.</string>
+	<string name="whatsnew_viator_title">투어 예약</string>
+	<string name="whatsnew_viator_message">전 세계 관광 도시에서 인기 투어를 선택하세요.</string>
 	<string name="whatsnew_driving_style_title">운전을 위한 새로운 지도 스타일</string>
 	<string name="whatsnew_driving_style_message">자동차 네비게이션 모드 사용이 더욱 쉬워졌습니다.</string>
 	<string name="more_on_bookingcom">Booking.com의 추가 정보</string>
@@ -1087,4 +1092,42 @@
 	<string name="prefs_languages_information_off_link">자세한 내용을 보려면 이 가이드를 확인하세요.</string>
 	<string name="whatsnew_transliteration_title">라틴어로 음역</string>
 	<string name="whatsnew_transliteration_message">거리 또는 개체에 사용자 언어로 된 이름이 없는 경우, 라틴 알파벳을 사용하여 나옵니다.</string>
+	<string name="learn_more">자세히 알아보기</string>
+	<string name="exit">끝내기</string>
+	<string name="routing_add_start_point">경로 계획을 세우기 위한 시작 지점을 추가하세요.</string>
+	<string name="routing_add_finish_point">경로 계획을 세우기 위한 끝 지점을 추가하세요.</string>
+	<string name="onboarding_welcome_message">턴-바이-턴 네비게이션을 이용하는 빠르고 상세하며 완전히 오프라인으로 이용 가능한 무료 지도입니다.</string>
+	<!-- нужно как-то выделять документы, чтобы привязать позже ссылки. -->
+	<string name="onboarding_welcome_agree">애플리케이션을 시작하면, 이용 약관 및 개인정보취급방침에 동의하는 것입니다.</string>
+	<string name="button_accept_and_continue">동의하고 계속 진행</string>
+	<string name="button_learn_more">자세히 알아보기</string>
+	<string name="onboarding_not_storage_permission_title">액세스 승인</string>
+	<string name="onboarding_not_storage_permission_message">장치에서 권한 설정을 변경하세요. MAPS.ME를 사용하려면 저장소 액세스가 필요합니다.</string>
+	<string name="button_exit">끝내기</string>
+	<string name="onboarding_learn_more_title">MAPS.ME에는 다음에 대한 액세스가 필요합니다:</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_learn_more_storage">저장소</string>
+	<string name="onboarding_learn_more_storage_message">오프라인으로 지도를 저장 및 사용하고 책갈피를 저장하기 위한 것입니다.</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_location">위치</string>
+	<string name="onboarding_learn_more_location_message">근처의 장소와 교통 상황을 보고 네비게이션을 사용하기 위한 것입니다.</string>
+	<string name="onboarding_learn_more_save_maps_message">설정에서 다운로드한 지도에 대한 목적지를 변경할 수도 있습니다.</string>
+	<string name="settings_device_memory">장치 메모리</string>
+	<string name="settings_card_memory">카드 메모리</string>
+	<string name="settings_storage_available">%s 사용 가능</string>
+	<string name="toast_location_permission_denied">앱 위치 권한 거부됨</string>
+	<string name="place_page_viator_title">관광 명소 및 투어</string>
+	<string name="planning_route_need_finish">경로 계획을 세우기 위한 목적지를 추가하세요.</string>
+	<string name="planning_route_need_start">경로 계획을 세우기 위한 시작 지점을 추가하세요.</string>
+	<string name="button_use">사용</string>
+	<string name="planning_route_manage_route">경로 관리</string>
+	<string name="button_plan">계획</string>
+	<string name="button_add">추가</string>
+	<string name="placepage_remove_stop">제거</string>
+	<string name="planning_route_remove_title">여기로 끌어와서 제거</string>
+	<string name="dialog_change_start_point_message">시작 지점을 현재 위치로 바꾸시겠습니까?</string>
+	<string name="button_replace">바꾸기</string>
+	<string name="placepage_add_stop">스톱 추가</string>
+	<string name="whatsnew_intermediate_point_title">추가 스톱</string>
+	<string name="whatsnew_intermediate_point_message">중간 지점을 사용하여 경로를 계획하세요.</string>
 </resources>
