--- a/android/res/values-pl/strings.xml
+++ b/android/res/values-pl/strings.xml
@@ -164,7 +164,7 @@
 	<!-- Settings button in system menu -->
 	<string name="settings">Ustawienia</string>
 	<!-- Header of settings activity where user defines storage path -->
-	<string name="maps_storage">Pamięć map</string>
+	<string name="maps_storage">Zapisz mapy do</string>
 	<!-- Detailed description of Maps Storage settings button -->
 	<string name="maps_storage_summary">Określa położenie przechowywania pobranych map</string>
 	<!-- Question dialog for transferring maps from one storage to another -->
@@ -334,7 +334,7 @@
 	<string name="duration_6_hours">6 godzin</string>
 	<string name="duration_12_hours">12 godzin</string>
 	<string name="duration_1_day">1 dzień</string>
-	<string name="recent_track_help_text">Uwaga: aktywacja tej funkcji spowoduje większe zużycie baterii.</string>
+	<string name="recent_track_help_text">Umożliwia na pewien okres zapisanie przebytej trasy i obejrzenie jej na mapie. Uwaga: włączenie tej funkcji spowoduje większe zużycie baterii. Trasa zostanie usunięta z mapy automatycznie po upływie określonego czasu.</string>
 	<string name="pref_track_ios_caption">Ostatnia trasa pokazuje pokonaną przez Ciebie ścieżkę.</string>
 	<string name="pref_track_ios_subcaption">Wybierz zakres czasowy dla zapisywanej trasy.</string>
 	<string name="placepage_distance">Dystans</string>
@@ -787,6 +787,9 @@
 	<string name="onboarding_notifications_title">Włącz powiadomienia o aktualizacjach</string>
 	<string name="onboarding_location_title">Pomaga nam znaleźć Ciebie</string>
 	<string name="onboarding_location_message">Abyś mógł korzystać z nawigacji i innych funkcji, musimy uzyskać dostęp do twojej geolokalizacji.</string>
+	<string name="onboarding_permissions_title">Zezwól MAPS.ME na dostęp do pamięci masowej i lokalizacji</string>
+	<string name="onboarding_permissions_message">Aby pobierać mapy, sprawdzać miejsca i ruch drogowy w twojej okolicy i móc korzystać z nawigacji.</string>
+	<string name="onboarding_welcome_title">Witaj w MAPS.ME</string>
 	<string name="dialog_incorrect_feature_position">Zmień lokalizację</string>
 	<string name="message_invalid_feature_position">Obiekt nie może znajdować się tutaj</string>
 	<string name="login_to_make_edits_visible">Zaloguj się, by inni użytkownicy mogli zobaczyć Twoje zmiany.</string>
@@ -939,7 +942,7 @@
 	<!-- Text in menu -->
 	<string name="blog">Blog</string>
 	<!-- Hint near allow statictics checkbox -->
-	<string name="allow_statistics_hint">Zbieranie statystyk użytkowania pomaga nam poprawiać aplikację.</string>
+	<string name="allow_statistics_hint">Zbieranie zanonimizowanych statystyk użytkowania pomaga nam poprawiać aplikację.</string>
 	<string name="general_settings">Ustawienia ogólne</string>
 	<string name="date">Data %d</string>
 	<!-- "Report a bug" -> "Generaal Feedback" -> "Something is not working" -->
@@ -1062,6 +1065,8 @@
 	<string name="whatsnew_smaller_mwm_message">Mapy wymagają o 20% mniej pamięci.</string>
 	<string name="whatsnew_waypoints_title">Punkty nawigacyjne w trasowaniu</string>
 	<string name="whatsnew_waypoints_message">Naciśnij punkt nawigacyjny, aby dodać go do trasy.</string>
+	<string name="whatsnew_viator_title">Zarezerwuj wycieczkę</string>
+	<string name="whatsnew_viator_message">Wybieraj popularne wycieczki w turystycznych miastach z całego świata.</string>
 	<string name="whatsnew_driving_style_title">Nowy styl mapy dla jazdy</string>
 	<string name="whatsnew_driving_style_message">Uproszczono tryb nawigacji pojazdu.</string>
 	<string name="more_on_bookingcom">Więcej na Booking.com</string>
@@ -1094,4 +1099,42 @@
 	<string name="prefs_languages_information_off_link">Aby uzyskać więcej informacji, sprawdź ten poradnik.</string>
 	<string name="whatsnew_transliteration_title">Transkrypcja na alfabet łaciński</string>
 	<string name="whatsnew_transliteration_message">Jeśli dana ulica lub obiekt nie posiada nazwy w twoim języku, ich nazwa zapisana zostanie w alfabecie łacińskim.</string>
+	<string name="learn_more">Dowiedz się więcej</string>
+	<string name="exit">Wyjdź</string>
+	<string name="routing_add_start_point">Aby zaplanować trasę, dodaj punkt początkowy.</string>
+	<string name="routing_add_finish_point">Aby zaplanować trasę, dodaj punkt końcowy.</string>
+	<string name="onboarding_welcome_message">Bezpłatne, szybkie i szczegółowe mapy offline z funkcją nawigacji.</string>
+	<!-- нужно как-то выделять документы, чтобы привязать позже ссылки. -->
+	<string name="onboarding_welcome_agree">Poprzez uruchomienie aplikacji wyrażasz zgodę na warunki użytkowania i politykę prywatności.</string>
+	<string name="button_accept_and_continue">Zaakceptuj i kontynuuj</string>
+	<string name="button_learn_more">Dowiedz się więcej</string>
+	<string name="onboarding_not_storage_permission_title">Udziel dostępu</string>
+	<string name="onboarding_not_storage_permission_message">Zmień ustawienia uprawnień w urządzeniu. Do korzystania z MAPS.ME wymagany jest dostęp do pamięci masowej.</string>
+	<string name="button_exit">Wyjdź</string>
+	<string name="onboarding_learn_more_title">MAPY.ME wymaga dostępu do</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_learn_more_storage">Pamięć masowa</string>
+	<string name="onboarding_learn_more_storage_message">Aby zapisywać zakładki i mapy oraz móc korzystać z pobranych map offline.</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_location">Lokalizacja</string>
+	<string name="onboarding_learn_more_location_message">Aby sprawdzać miejsca i ruch drogowy w twojej okolicy móc korzystać z nawigacji.</string>
+	<string name="onboarding_learn_more_save_maps_message">Miejsce docelowe zapisu pobranych map można również zmienić w ustawieniach.</string>
+	<string name="settings_device_memory">Pamięć urządzenia</string>
+	<string name="settings_card_memory">Pamięć na karcie</string>
+	<string name="settings_storage_available">dostępne %s</string>
+	<string name="toast_location_permission_denied">Odmowa dla aplikacji uprawnień do lokalizacji</string>
+	<string name="place_page_viator_title">Atrakcje i wycieczki</string>
+	<string name="planning_route_need_finish">Aby zaplanować trasę, dodaj punkt docelowy.</string>
+	<string name="planning_route_need_start">Aby zaplanować trasę, dodaj punkt początkowy.</string>
+	<string name="button_use">Użyj</string>
+	<string name="planning_route_manage_route">Zarządzaj trasą</string>
+	<string name="button_plan">Zaplanuj</string>
+	<string name="button_add">Dodaj</string>
+	<string name="placepage_remove_stop">Usuń</string>
+	<string name="planning_route_remove_title">Przeciągnij tu, aby usunąć</string>
+	<string name="dialog_change_start_point_message">Zamienić punkt początkowy na bieżącą lokalizację?</string>
+	<string name="button_replace">Zamień</string>
+	<string name="placepage_add_stop">Dodaj postój</string>
+	<string name="whatsnew_intermediate_point_title">Dodatkowy postój</string>
+	<string name="whatsnew_intermediate_point_message">Zaplanuj trasę z postojem.</string>
 </resources>
