--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -167,7 +167,7 @@
 	<!-- Settings button in system menu -->
 	<string name="settings">Настройки</string>
 	<!-- Header of settings activity where user defines storage path -->
-	<string name="maps_storage">Хранилище карт</string>
+	<string name="maps_storage">Сохранять карты в</string>
 	<!-- Detailed description of Maps Storage settings button -->
 	<string name="maps_storage_summary">Выберите место, где будут храниться загруженные карты</string>
 	<!-- Question dialog for transferring maps from one storage to another -->
@@ -343,7 +343,7 @@
 	<string name="duration_6_hours">6 часов</string>
 	<string name="duration_12_hours">12 часов</string>
 	<string name="duration_1_day">1 сутки</string>
-	<string name="recent_track_help_text">Внимание: активация этой функции может привести к повышенному расходу батареи.</string>
+	<string name="recent_track_help_text">Эта функция позволяет записывать пройденный путь за определенный период времени и видеть его на карте. Внимание: активация этой функции может привести к повышенному расходу батареи. Записанный трек будет удален с карты по истечении этого срока.</string>
 	<string name="pref_track_ios_caption">История пути покажет недавно пройденный маршрут.</string>
 	<string name="pref_track_ios_subcaption">Выберите длительность записи истории.</string>
 	<string name="placepage_distance">Расстояние</string>
@@ -804,6 +804,9 @@
 	<string name="onboarding_notifications_title">Разрешите отправку уведомлений</string>
 	<string name="onboarding_location_title">Помогите найти вас</string>
 	<string name="onboarding_location_message">Чтобы пользоваться навигацией и другими функциями приложения, нам необходим доступ к вашей геопозиции.</string>
+	<string name="onboarding_permissions_title">Предоставьте MAPS.ME доступ к памяти и местоположению.</string>
+	<string name="onboarding_permissions_message">Чтобы скачивать карты, смотреть места вокруг вас и пользоваться навигацией.</string>
+	<string name="onboarding_welcome_title">Добро пожаловать в MAPS.ME</string>
 	<string name="dialog_incorrect_feature_position">Измените местоположение</string>
 	<string name="message_invalid_feature_position">Объект не может находиться в этом месте</string>
 	<string name="login_to_make_edits_visible">Войдите, чтобы ваши изменения увидели другие пользователи.</string>
@@ -957,7 +960,7 @@
 	<!-- Text in menu -->
 	<string name="blog">Блог</string>
 	<!-- Hint near allow statictics checkbox -->
-	<string name="allow_statistics_hint">Сбор статистики помогает нам совершенствовать приложение.</string>
+	<string name="allow_statistics_hint">Сбор анонимной статистики помогает нам совершенствовать приложение.</string>
 	<string name="general_settings">Общие настройки</string>
 	<string name="date">Дата %d</string>
 	<!-- "Report a bug" -> "Generaal Feedback" -> "Something is not working" -->
@@ -1083,6 +1086,8 @@
 	<string name="whatsnew_smaller_mwm_message">Занимают на 20% меньше места на телефоне.</string>
 	<string name="whatsnew_waypoints_title">Маршруты с промежуточными точками</string>
 	<string name="whatsnew_waypoints_message">Нажмите на объекты, чтобы включить их в маршрут.</string>
+	<string name="whatsnew_viator_title">Забронируйте экскурсию</string>
+	<string name="whatsnew_viator_message">Выбирайте популярные экскурсии в туристических городах мира.</string>
 	<string name="whatsnew_driving_style_title">Новый автомобильный стиль карт</string>
 	<string name="whatsnew_driving_style_message">Режим автомобильной навигации стал удобнее.</string>
 	<string name="more_on_bookingcom">Больше на Booking.com</string>
@@ -1118,4 +1123,40 @@
 	<string name="yandex_taxi_title">Яндекс.Такси</string>
 	<string name="learn_more">Узнать больше</string>
 	<string name="exit">Выход</string>
+	<string name="routing_add_start_point">Добавьте стартовую точку, чтобы построить маршрут.</string>
+	<string name="routing_add_finish_point">Добавьте конечную точку, чтобы построить маршрут.</string>
+	<string name="onboarding_welcome_message">Бесплатные, быстрые, подробные и полностью автономные карты с пошаговой навигацией.</string>
+	<!-- нужно как-то выделять документы, чтобы привязать позже ссылки. -->
+	<string name="onboarding_welcome_agree">Запуская приложение, вы соглашаетесь с условиями использования и политикой конфиденциальности.</string>
+	<string name="button_accept_and_continue">Принять и продолжить</string>
+	<string name="button_learn_more">Подробнее</string>
+	<string name="onboarding_not_storage_permission_title">Предоставьте доступ</string>
+	<string name="onboarding_not_storage_permission_message">Предоставьте MAPS.ME доступ к памяти в настройках вашего устройства, иначе использовать MAPS.ME будет невозможно.</string>
+	<string name="button_exit">Выход</string>
+	<string name="onboarding_learn_more_title">MAPS.ME нужен доступ к</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_learn_more_storage">Память</string>
+	<string name="onboarding_learn_more_storage_message">Чтобы сохранять и использовать скачанные карты и сохранять метки.</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_location">Местоположение</string>
+	<string name="onboarding_learn_more_location_message">Чтобы смотреть места и пробки рядом с вами и пользоваться навигацией.</string>
+	<string name="onboarding_learn_more_save_maps_message">В настройках можно изменить место хранения загруженных карт.</string>
+	<string name="settings_device_memory">Память устроства</string>
+	<string name="settings_card_memory">Карта памяти</string>
+	<string name="settings_storage_available">%s доступно</string>
+	<string name="toast_location_permission_denied">Определение местоположения запрещено</string>
+	<string name="place_page_viator_title">Экскурсии и достопримечательности</string>
+	<string name="planning_route_need_finish">Для планирования маршрута добавьте финишную точку.</string>
+	<string name="planning_route_need_start">Для планирования маршрута добавьте стартовую точку.</string>
+	<string name="button_use">Использовать</string>
+	<string name="planning_route_manage_route">Изменить маршрут</string>
+	<string name="button_plan">Построить</string>
+	<string name="button_add">Добавить</string>
+	<string name="placepage_remove_stop">Удалить</string>
+	<string name="planning_route_remove_title">Перетяните сюда, чтобы удалить</string>
+	<string name="dialog_change_start_point_message">Заменить стартовую точку на текущее местоположение?</string>
+	<string name="button_replace">Заменить</string>
+	<string name="placepage_add_stop">Заехать</string>
+	<string name="whatsnew_intermediate_point_title">Промежуточная остановка</string>
+	<string name="whatsnew_intermediate_point_message">Планируйте маршрут с дополнительной остановкой.</string>
 </resources>
