--- a/android/res/values-zh-rTW/strings.xml
+++ b/android/res/values-zh-rTW/strings.xml
@@ -163,7 +163,7 @@
 	<!-- Settings button in system menu -->
 	<string name="settings">設定</string>
 	<!-- Header of settings activity where user defines storage path -->
-	<string name="maps_storage">地圖儲存</string>
+	<string name="maps_storage">將地圖儲存至</string>
 	<!-- Detailed description of Maps Storage settings button -->
 	<string name="maps_storage_summary">請選擇下載地圖後要放的位置</string>
 	<!-- Question dialog for transferring maps from one storage to another -->
@@ -335,7 +335,7 @@
 	<string name="duration_6_hours">6小時</string>
 	<string name="duration_12_hours">12小時</string>
 	<string name="duration_1_day">1天</string>
-	<string name="recent_track_help_text">請注意：啟動此功能會導致用電量增加。</string>
+	<string name="recent_track_help_text">它可讓您記錄特定期間所行經的路徑，並在地圖上看到該路徑。請注意：啟用此項功能會增加電池使用量。在時間間隔過期後，會從地圖中自動移除行進路線。</string>
 	<string name="pref_track_ios_caption">近期軌跡顯示您的行進道路。</string>
 	<string name="pref_track_ios_subcaption">請選擇儲存軌跡的時間範圍。</string>
 	<string name="placepage_distance">距离</string>
@@ -794,6 +794,9 @@
 	<string name="onboarding_notifications_title">啟用更新通知</string>
 	<string name="onboarding_location_title">幫我們找到您</string>
 	<string name="onboarding_location_message">如要使用導航和其他功能，我們需要能獲取您的地理位置.</string>
+	<string name="onboarding_permissions_title">允許 MAPS.ME 存儲和定位的權限</string>
+	<string name="onboarding_permissions_message">所以，您可以下載地圖，查看您附近的地點和交通，以及使用導航服務。</string>
+	<string name="onboarding_welcome_title">歡迎來到 MAPS.ME</string>
 	<string name="dialog_incorrect_feature_position">改變位置</string>
 	<string name="message_invalid_feature_position">物件無法設置在這裡</string>
 	<string name="login_to_make_edits_visible">登入來讓其他使用者能看到您所作出的修改。</string>
@@ -946,7 +949,7 @@
 	<!-- Text in menu -->
 	<string name="blog">部落格</string>
 	<!-- Hint near allow statictics checkbox -->
-	<string name="allow_statistics_hint">收集使用量統計資料有助於我們改善應用程式。</string>
+	<string name="allow_statistics_hint">收集匿名使用統計資訊有助於我們改善應用程式。</string>
 	<string name="general_settings">一般設定</string>
 	<string name="date">日期 %d</string>
 	<!-- "Report a bug" -> "Generaal Feedback" -> "Something is not working" -->
@@ -1069,6 +1072,8 @@
 	<string name="whatsnew_smaller_mwm_message">Maps 所需存儲空間減少 20%。</string>
 	<string name="whatsnew_waypoints_title">在路線中新增路徑點</string>
 	<string name="whatsnew_waypoints_message">點按地點，即可向您的路線新增路徑點。</string>
+	<string name="whatsnew_viator_title">預訂行程</string>
+	<string name="whatsnew_viator_message">選擇全世界旅遊城市的熱門行程。</string>
 	<string name="whatsnew_driving_style_title">新的駕駛地圖模式</string>
 	<string name="whatsnew_driving_style_message">汽車導航模式更好用。</string>
 	<string name="more_on_bookingcom">Booking.com 上的更多資訊</string>
@@ -1101,4 +1106,42 @@
 	<string name="prefs_languages_information_off_link">如需更多資訊，請參閱本指南。</string>
 	<string name="whatsnew_transliteration_title">音譯為拉丁文</string>
 	<string name="whatsnew_transliteration_message">若街道或物件沒有您語言的名稱，會使用拉丁字母拼出。</string>
+	<string name="learn_more">瞭解更多資訊</string>
+	<string name="exit">退出</string>
+	<string name="routing_add_start_point">新增起點以計劃路線。</string>
+	<string name="routing_add_finish_point">新增終點以計劃路線。</string>
+	<string name="onboarding_welcome_message">免費、快速、詳盡又全面的地圖，提供逐向導航服務。</string>
+	<!-- нужно как-то выделять документы, чтобы привязать позже ссылки. -->
+	<string name="onboarding_welcome_agree">啟動本應用程式，即表示您同意服務條款和隱私權原則。</string>
+	<string name="button_accept_and_continue">接受並繼續</string>
+	<string name="button_learn_more">瞭解更多資訊</string>
+	<string name="onboarding_not_storage_permission_title">授與存取權</string>
+	<string name="onboarding_not_storage_permission_message">變更您裝置中的權限設定。需要存儲權限才能使用 MAPS.ME。</string>
+	<string name="button_exit">退出</string>
+	<string name="onboarding_learn_more_title">MAPS.ME 需要下列存取權限：</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_learn_more_storage">存儲空間</string>
+	<string name="onboarding_learn_more_storage_message">儲存和離線使用下載的地圖並儲存書籤。</string>
+	<!-- Default permission's name from Android settings. -->
+	<string name="onboarding_location">位置</string>
+	<string name="onboarding_learn_more_location_message">查看您附近的地點和交通，以及使用導航服務。</string>
+	<string name="onboarding_learn_more_save_maps_message">在設定中，您還可變更下載的地圖之目的地。</string>
+	<string name="settings_device_memory">裝置記憶體</string>
+	<string name="settings_card_memory">卡記憶體</string>
+	<string name="settings_storage_available">%s 可用</string>
+	<string name="toast_location_permission_denied">應用程式地點存取權限被拒絕</string>
+	<string name="place_page_viator_title">景點和行程</string>
+	<string name="planning_route_need_finish">新增目的地以計劃路線。</string>
+	<string name="planning_route_need_start">新增起點以計劃路線。</string>
+	<string name="button_use">使用</string>
+	<string name="planning_route_manage_route">管理路線</string>
+	<string name="button_plan">計畫</string>
+	<string name="button_add">新增</string>
+	<string name="placepage_remove_stop">移除</string>
+	<string name="planning_route_remove_title">在此拖曳以移除</string>
+	<string name="dialog_change_start_point_message">取代目前位置的起點嗎？</string>
+	<string name="button_replace">取代</string>
+	<string name="placepage_add_stop">新增應用程式</string>
+	<string name="whatsnew_intermediate_point_title">其他站點</string>
+	<string name="whatsnew_intermediate_point_message">計劃有中途休息站的路線。</string>
 </resources>
