--- a/iphone/Maps/LocalizedStrings/el.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/el.lproj/Localizable.strings
@@ -266,7 +266,7 @@
 "settings" = "Ρυθμίσεις";
 
 /* Header of settings activity where user defines storage path */
-"maps_storage" = "Αποθηκευτικό χώρος χαρτών";
+"maps_storage" = "Αποθήκευση χαρτών στο";
 
 /* Detailed description of Maps Storage settings button */
 "maps_storage_summary" = "Επιλέξτε από που θα γίνει λήψη χαρτών";
@@ -537,7 +537,7 @@
 
 "duration_1_day" = "1 ημέρα";
 
-"recent_track_help_text" = "Σημείωση: η ενεργοποίηση αυτής της λειτουργίας κάνει έντονη χρήση της μπαταρίας.";
+"recent_track_help_text" = "Σας επιτρέπει να καταγράψετε τη διαδρομή που έχει διανυθεί για συγκεκριμένο χρονικό διάστημα και να την δείτε στο χάρτη. Λάβετε υπόψη: η ενεργοποίηση αυτής της λειτουργίας κάνει έντονη χρήση της μπαταρίας. Το τμήμα θα αφαιρεθεί αυτόματα από το χάρτη μετά τη λήξη του μεσοδιαστήματος.";
 
 "pref_track_ios_caption" = "Recent track shows your traveled path.";
 
@@ -1336,9 +1336,9 @@
 
 "onboarding_location_message" = "Προκειμένου να χρησιμοποιήσετε την πλοήγηση και τις άλλες λειτουργίες του MAPS.ME χρειάζεται πρόσβαση στη γεωγραφική σας θέση.";
 
-"onboarding_permissions_title" = "Allow MAPS.ME access to storage and location";
+"onboarding_permissions_title" = "Να επιτραπεί στο MAPS.ME πρόσβαση στον αποθηκευτικό χώρο και την τοποθεσία";
 
-"onboarding_permissions_message" = "So you can download maps, see places and traffic near you and use navigation.";
+"onboarding_permissions_message" = "Μπορείτε να κατεβάσετε χάρτες, να δείτε μέρη και πληροφορίες για την κίνηση κοντά σε εσάς και να χρησιμοποιήσεττ την πλοήγηση.";
 
 "onboarding_storage_permissions_title" = "Grant access";
 
@@ -1356,7 +1356,7 @@
 
 "onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
 
-"onboarding_welcome_title" = "Welcome to MAPS.ME";
+"onboarding_welcome_title" = "Καλωσήρθατε στο MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
 
@@ -1646,7 +1646,7 @@
 "blog" = "Ιστολόγιο";
 
 /* Hint near allow statictics checkbox */
-"allow_statistics_hint" = "Η συλλογή στατιστικών στοιχείων χρήσης μας βοηθάει να βελτιώσουμε την εφαρμογή.";
+"allow_statistics_hint" = "Η συλλογή ανώνυμων στατιστικών στοιχείων μας βοηθά να βελτιώσουμε την εφαρμογή.";
 
 "general_settings" = "Γενικές ρυθμίσεις";
 
@@ -1877,9 +1877,9 @@
 
 "whatsnew_waypoints_message" = "Πατήστε στα μέρη για να προσθέσετε ενδιάμεσα σημεία στη διαδρομή σας.";
 
-"whatsnew_viator_title" = "Viator title";
+"whatsnew_viator_title" = "Κάντε κράτηση σε μια ξενάγηση";
 
-"whatsnew_viator_message" = "Viator message";
+"whatsnew_viator_message" = "Επιλέξτε δημοφιλείς ξεναγήσεις σε τουριστικές πόλεις σε όλο τον κόσμο.";
 
 "whatsnew_driving_style_title" = "Νέο στυλ χάρτη για την οδήγηση";
 
@@ -1948,14 +1948,75 @@
 
 "yandex_taxi_title" = "Yandex.Taxi";
 
-"learn_more" = "Learn more";
+"learn_more" = "Μάθετε περισσότερα";
 
-"exit" = "Exit";
+"exit" = "Έξοδος";
 
-"routing_add_start_point" = "Add start point to plan a route.";
+"routing_add_start_point" = "Προσθέστε αφετηρία για να σχεδιάσετε μια διαδρομή.";
 
-"routing_add_finish_point" = "Add finish to plan a route.";
+"routing_add_finish_point" = "Προσθέστε τελικό προορισμό, για να σχεδιάσετε μια διαδρομή.";
 
-"use" = "Use";
+"onboarding_welcome_message" = "Δωρεάν, γρήγοροι, λεπτομερείς χάρτες αποκλειστικά εκτός σύνδεσης με πλοήγηση αννά στροφή.";
 
-"viator_title" = "Attractions and tours";
+/* нужно как-то выделять документы, чтобы привязать позже ссылки. */
+"onboarding_welcome_agree" = "Με την εκκίνηση αυτής της εφαρμογής, συμφωνείτε με τους όρους χρήσης και την πολιτική προστασίας προσωπικών δεδομένων.";
+
+"button_accept_and_continue" = "Αποδοχή και συνέχεια";
+
+"button_learn_more" = "Μάθετε περισσότερα";
+
+"onboarding_not_storage_permission_title" = "Εκχώρηση άδειας";
+
+"onboarding_not_storage_permission_message" = "Αλλάξτε τις ρυθμίσεις άδειας στη συσκευή σας. Χρειάζεται πρόσβαση στον αποθηκευτικό χώρο για τη χρήση του MAPS.ME";
+
+"button_exit" = "Έξοδος";
+
+"onboarding_learn_more_title" = "Το MAPS.ME χρειάζεται πρόσβαση στο";
+
+/* Default permission's name from Android settings. */
+"onboarding_learn_more_storage" = "Αποθηκευτικός χώρος";
+
+"onboarding_learn_more_storage_message" = "Για την αποθήκευση και τη χρήση των χαρτών εκτός σύνδεσης, και την αποθήκευση αγαπημένων.";
+
+/* Default permission's name from Android settings. */
+"onboarding_location" = "Τοποθεσία";
+
+"onboarding_learn_more_location_message" = "Για την προβολή μερών και της κυκλοφορίας κοντά σας εσάς και τη χρήση της πλοήγησης.";
+
+"onboarding_learn_more_save_maps_message" = "Μπορείτε επίσης να αλλάξετε τον προορισμό για τους χάρτες που έχετε κατεβάσει από τις ρυθμίσεις.";
+
+"settings_device_memory" = "Μνήμη συσκευής";
+
+"settings_card_memory" = "Κάρτα μνήμης";
+
+"settings_storage_available" = "%s διαθέσιμα";
+
+"toast_location_permission_denied" = "Άρνηση πρόσβασης εφαρμογής στον εντοπισμό τοποθεσίας";
+
+"place_page_viator_title" = "Αξιοθέατα και περιηγήσεις";
+
+"planning_route_need_finish" = "Προσθέστε προορισμό για να σχεδιάσετε μια διαδρομή.";
+
+"planning_route_need_start" = "Προσθέστε αφετηρία για να σχεδιάσετε μια διαδρομή.";
+
+"button_use" = "Χρήση";
+
+"planning_route_manage_route" = "Διαχείριση διαδρομής";
+
+"button_plan" = "Σχέδιο";
+
+"button_add" = "Προσθήκη";
+
+"placepage_remove_stop" = "Κατάργηση";
+
+"planning_route_remove_title" = "Σύρετε εδώ για κατάργηση";
+
+"dialog_change_start_point_message" = "Θέλετε να αλλάξετε την αφετηρία στην τρέχουσα θέση;";
+
+"button_replace" = "Αλλαγή";
+
+"placepage_add_stop" = "Προσθήκη στάσης";
+
+"whatsnew_intermediate_point_title" = "Επιπλέον στάση";
+
+"whatsnew_intermediate_point_message" = "Σχεδιάστε μια διαδρομή με ενδιάμεσο προορισμό.";
