--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -266,7 +266,7 @@
 "settings" = "Innstillinger";
 
 /* Header of settings activity where user defines storage path */
-"maps_storage" = "Kartlagring";
+"maps_storage" = "Lagre kart på";
 
 /* Detailed description of Maps Storage settings button */
 "maps_storage_summary" = "Velg hvor du vil at kartene skal lastes ned til";
@@ -537,7 +537,7 @@
 
 "duration_1_day" = "1 dag";
 
-"recent_track_help_text" = "Merk følgende: Aktivering av denne funksjonen forårsaker økt batteribruk.";
+"recent_track_help_text" = "Det lar deg lagre ruten du har reist i en spesifikk periode og se den på kartet. Merk: Aktivering av funksjonen øker batteriforbruket. Ruten fjernes automatisk fra kartet når tidsintervallet utløper.";
 
 "pref_track_ios_caption" = "Nylig rute viser ruten du har fulgt.";
 
@@ -1336,9 +1336,9 @@
 
 "onboarding_location_message" = "For å bruke navigering og andre funksjoner må vi ha tilgang til posisjonen din.";
 
-"onboarding_permissions_title" = "Allow MAPS.ME access to storage and location";
+"onboarding_permissions_title" = "Tillat MAPS.ME tilgang til minnet og plasseringen";
 
-"onboarding_permissions_message" = "So you can download maps, see places and traffic near you and use navigation.";
+"onboarding_permissions_message" = "Du kan laste ned kart, se steder og trafikk nær deg og bruke navigasjon.";
 
 "onboarding_storage_permissions_title" = "Grant access";
 
@@ -1356,7 +1356,7 @@
 
 "onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
 
-"onboarding_welcome_title" = "Welcome to MAPS.ME";
+"onboarding_welcome_title" = "Velkommen til MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
 
@@ -1646,7 +1646,7 @@
 "blog" = "Blogg";
 
 /* Hint near allow statictics checkbox */
-"allow_statistics_hint" = "Innsamling av brukerstatistikk hjelper oss til å forbedre appen.";
+"allow_statistics_hint" = "Anonyms innsamling av brukerstatistikk hjelper oss med å forbedre appen.";
 
 "general_settings" = "Generelle innstillinger";
 
@@ -1877,9 +1877,9 @@
 
 "whatsnew_waypoints_message" = "Trykk på steder for å legge til rutepunkter.";
 
-"whatsnew_viator_title" = "Viator title";
+"whatsnew_viator_title" = "Bestill omvisning";
 
-"whatsnew_viator_message" = "Viator message";
+"whatsnew_viator_message" = "Velg populære omvisninger i turistbyer over hele verden.";
 
 "whatsnew_driving_style_title" = "Ny kartstil for bruk under kjøring";
 
@@ -1948,14 +1948,75 @@
 
 "yandex_taxi_title" = "Yandex.Taxi";
 
-"learn_more" = "Learn more";
+"learn_more" = "Finn ut mer";
 
-"exit" = "Exit";
+"exit" = "Avslutt";
 
-"routing_add_start_point" = "Add start point to plan a route.";
+"routing_add_start_point" = "Angi startpunkt for å planlegge rute.";
 
-"routing_add_finish_point" = "Add finish to plan a route.";
+"routing_add_finish_point" = "Angi sluttpunkt for å planlegge rute.";
 
-"use" = "Use";
+"onboarding_welcome_message" = "Gratis, rask, detaljert og helt offline kart med rutenavigasjon.";
 
-"viator_title" = "Attractions and tours";
+/* нужно как-то выделять документы, чтобы привязать позже ссылки. */
+"onboarding_welcome_agree" = "Ved å starte programmet samtykker du til brukervilkårene og reglene for personvern.";
+
+"button_accept_and_continue" = "Godta og fortsett";
+
+"button_learn_more" = "Finn ut mer";
+
+"onboarding_not_storage_permission_title" = "Gi tilgang";
+
+"onboarding_not_storage_permission_message" = "Endre innstillinger for tillatelser på enheten din. Det er nødvendig med tilgang til minnet for å kunne bruke MAPS.ME.";
+
+"button_exit" = "Avslutt";
+
+"onboarding_learn_more_title" = "MAPS.ME trenger tilgang til";
+
+/* Default permission's name from Android settings. */
+"onboarding_learn_more_storage" = "Minnet";
+
+"onboarding_learn_more_storage_message" = "For å lagre og bruke nedlastede kart offline og lagre bokmerker.";
+
+/* Default permission's name from Android settings. */
+"onboarding_location" = "Plassering";
+
+"onboarding_learn_more_location_message" = "For å se steder og trafikk nær deg og bruke navigasjon.";
+
+"onboarding_learn_more_save_maps_message" = "Du kan også endre destinasjon for nedlastede kart under innstillinger.";
+
+"settings_device_memory" = "Enhetsminnet";
+
+"settings_card_memory" = "Minnekort";
+
+"settings_storage_available" = "%s tilgjengelig";
+
+"toast_location_permission_denied" = "App-plasseringstillatelse avvist";
+
+"place_page_viator_title" = "Attraksjoner og omvisninger";
+
+"planning_route_need_finish" = "Angi destinasjon for å planlegge rute.";
+
+"planning_route_need_start" = "Angi startpunkt for å planlegge rute.";
+
+"button_use" = "Bruk";
+
+"planning_route_manage_route" = "Administrere rute";
+
+"button_plan" = "Planlegge";
+
+"button_add" = "Angi";
+
+"placepage_remove_stop" = "Fjern";
+
+"planning_route_remove_title" = "Dra hit for å fjerne";
+
+"dialog_change_start_point_message" = "Plassére startpunkt til nåværende plassering?";
+
+"button_replace" = "Plassére";
+
+"placepage_add_stop" = "Angi stopp";
+
+"whatsnew_intermediate_point_title" = "Ekstra mellomstopp";
+
+"whatsnew_intermediate_point_message" = "Planlegg rute med mellomstopp.";
