--- a/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
@@ -266,7 +266,7 @@
 "settings" = "Ustawienia";
 
 /* Header of settings activity where user defines storage path */
-"maps_storage" = "Pamięć map";
+"maps_storage" = "Zapisz mapy do";
 
 /* Detailed description of Maps Storage settings button */
 "maps_storage_summary" = "Określa położenie przechowywania pobranych map";
@@ -537,7 +537,7 @@
 
 "duration_1_day" = "1 dzień";
 
-"recent_track_help_text" = "Uwaga: aktywacja tej funkcji spowoduje większe zużycie baterii.";
+"recent_track_help_text" = "Umożliwia na pewien okres zapisanie przebytej trasy i obejrzenie jej na mapie. Uwaga: włączenie tej funkcji spowoduje większe zużycie baterii. Trasa zostanie usunięta z mapy automatycznie po upływie określonego czasu.";
 
 "pref_track_ios_caption" = "Ostatnia trasa pokazuje pokonaną przez Ciebie ścieżkę.";
 
@@ -1336,9 +1336,9 @@
 
 "onboarding_location_message" = "Abyś mógł korzystać z nawigacji i innych funkcji, musimy uzyskać dostęp do twojej geolokalizacji.";
 
-"onboarding_permissions_title" = "Allow MAPS.ME access to storage and location";
+"onboarding_permissions_title" = "Zezwól MAPS.ME na dostęp do pamięci masowej i lokalizacji";
 
-"onboarding_permissions_message" = "So you can download maps, see places and traffic near you and use navigation.";
+"onboarding_permissions_message" = "Aby pobierać mapy, sprawdzać miejsca i ruch drogowy w twojej okolicy i móc korzystać z nawigacji.";
 
 "onboarding_storage_permissions_title" = "Grant access";
 
@@ -1356,7 +1356,7 @@
 
 "onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
 
-"onboarding_welcome_title" = "Welcome to MAPS.ME";
+"onboarding_welcome_title" = "Witaj w MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
 
@@ -1646,7 +1646,7 @@
 "blog" = "Blog";
 
 /* Hint near allow statictics checkbox */
-"allow_statistics_hint" = "Zbieranie statystyk użytkowania pomaga nam poprawiać aplikację.";
+"allow_statistics_hint" = "Zbieranie zanonimizowanych statystyk użytkowania pomaga nam poprawiać aplikację.";
 
 "general_settings" = "Ustawienia ogólne";
 
@@ -1877,9 +1877,9 @@
 
 "whatsnew_waypoints_message" = "Naciśnij punkt nawigacyjny, aby dodać go do trasy.";
 
-"whatsnew_viator_title" = "Viator title";
+"whatsnew_viator_title" = "Zarezerwuj wycieczkę";
 
-"whatsnew_viator_message" = "Viator message";
+"whatsnew_viator_message" = "Wybieraj popularne wycieczki w turystycznych miastach z całego świata.";
 
 "whatsnew_driving_style_title" = "Nowy styl mapy dla jazdy";
 
@@ -1948,14 +1948,75 @@
 
 "yandex_taxi_title" = "Yandex.Taxi";
 
-"learn_more" = "Learn more";
+"learn_more" = "Dowiedz się więcej";
 
-"exit" = "Exit";
+"exit" = "Wyjdź";
 
-"routing_add_start_point" = "Add start point to plan a route.";
+"routing_add_start_point" = "Aby zaplanować trasę, dodaj punkt początkowy.";
 
-"routing_add_finish_point" = "Add finish to plan a route.";
+"routing_add_finish_point" = "Aby zaplanować trasę, dodaj punkt końcowy.";
 
-"use" = "Use";
+"onboarding_welcome_message" = "Bezpłatne, szybkie i szczegółowe mapy offline z funkcją nawigacji.";
 
-"viator_title" = "Attractions and tours";
+/* нужно как-то выделять документы, чтобы привязать позже ссылки. */
+"onboarding_welcome_agree" = "Poprzez uruchomienie aplikacji wyrażasz zgodę na warunki użytkowania i politykę prywatności.";
+
+"button_accept_and_continue" = "Zaakceptuj i kontynuuj";
+
+"button_learn_more" = "Dowiedz się więcej";
+
+"onboarding_not_storage_permission_title" = "Udziel dostępu";
+
+"onboarding_not_storage_permission_message" = "Zmień ustawienia uprawnień w urządzeniu. Do korzystania z MAPS.ME wymagany jest dostęp do pamięci masowej.";
+
+"button_exit" = "Wyjdź";
+
+"onboarding_learn_more_title" = "MAPY.ME wymaga dostępu do";
+
+/* Default permission's name from Android settings. */
+"onboarding_learn_more_storage" = "Pamięć masowa";
+
+"onboarding_learn_more_storage_message" = "Aby zapisywać zakładki i mapy oraz móc korzystać z pobranych map offline.";
+
+/* Default permission's name from Android settings. */
+"onboarding_location" = "Lokalizacja";
+
+"onboarding_learn_more_location_message" = "Aby sprawdzać miejsca i ruch drogowy w twojej okolicy móc korzystać z nawigacji.";
+
+"onboarding_learn_more_save_maps_message" = "Miejsce docelowe zapisu pobranych map można również zmienić w ustawieniach.";
+
+"settings_device_memory" = "Pamięć urządzenia";
+
+"settings_card_memory" = "Pamięć na karcie";
+
+"settings_storage_available" = "dostępne %s";
+
+"toast_location_permission_denied" = "Odmowa dla aplikacji uprawnień do lokalizacji";
+
+"place_page_viator_title" = "Atrakcje i wycieczki";
+
+"planning_route_need_finish" = "Aby zaplanować trasę, dodaj punkt docelowy.";
+
+"planning_route_need_start" = "Aby zaplanować trasę, dodaj punkt początkowy.";
+
+"button_use" = "Użyj";
+
+"planning_route_manage_route" = "Zarządzaj trasą";
+
+"button_plan" = "Zaplanuj";
+
+"button_add" = "Dodaj";
+
+"placepage_remove_stop" = "Usuń";
+
+"planning_route_remove_title" = "Przeciągnij tu, aby usunąć";
+
+"dialog_change_start_point_message" = "Zamienić punkt początkowy na bieżącą lokalizację?";
+
+"button_replace" = "Zamień";
+
+"placepage_add_stop" = "Dodaj postój";
+
+"whatsnew_intermediate_point_title" = "Dodatkowy postój";
+
+"whatsnew_intermediate_point_message" = "Zaplanuj trasę z postojem.";
