--- a/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
@@ -266,7 +266,7 @@
 "settings" = "Configurações";
 
 /* Header of settings activity where user defines storage path */
-"maps_storage" = "Armazenamento dos mapas";
+"maps_storage" = "Guardar mapas para";
 
 /* Detailed description of Maps Storage settings button */
 "maps_storage_summary" = "Selecione o local para onde os mapas devem ser descarregados";
@@ -537,7 +537,7 @@
 
 "duration_1_day" = "1 dia";
 
-"recent_track_help_text" = "Atenção: a ativação desta função aumenta o uso da bateria.";
+"recent_track_help_text" = "Permite-lhe gravar um caminho percorrido durante um determinado período e vê-lo no papa. Nota: esta funcionalidade provoca uma maior utilização da bateria. A rota será automaticamente removida do mapa após o intervalo de tempo expirar.";
 
 "pref_track_ios_caption" = "O trajeto recente mostra o seu caminho percorrido.";
 
@@ -1336,9 +1336,9 @@
 
 "onboarding_location_message" = "Para utilizar a navegação e outros recursos, precisamos de aceder à sua localização geográfica.";
 
-"onboarding_permissions_title" = "Allow MAPS.ME access to storage and location";
+"onboarding_permissions_title" = "Permitir que o MAPS.ME tenha acesso ao armazenamento e localização";
 
-"onboarding_permissions_message" = "So you can download maps, see places and traffic near you and use navigation.";
+"onboarding_permissions_message" = "Para que possa transferir mapas, ver locais e o trânsito perto e si e utilizar a navegação.";
 
 "onboarding_storage_permissions_title" = "Grant access";
 
@@ -1356,7 +1356,7 @@
 
 "onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
 
-"onboarding_welcome_title" = "Welcome to MAPS.ME";
+"onboarding_welcome_title" = "Bem-vindo ao MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
 
@@ -1646,7 +1646,7 @@
 "blog" = "Blogue";
 
 /* Hint near allow statictics checkbox */
-"allow_statistics_hint" = "A recolha de estatísticas de utilização ajuda-nos a melhorar a app.";
+"allow_statistics_hint" = "A recolha de estatísticas de utilização anónimas ajuda-nos a melhorar a app.";
 
 "general_settings" = "Configurações gerais";
 
@@ -1877,9 +1877,9 @@
 
 "whatsnew_waypoints_message" = "Toque nos locais para adicionar pontos de caminho à sua rota.";
 
-"whatsnew_viator_title" = "Viator title";
+"whatsnew_viator_title" = "Reservar um passeio";
 
-"whatsnew_viator_message" = "Viator message";
+"whatsnew_viator_message" = "Escolha passeios populares em cidades turísticas em todo o mundo.";
 
 "whatsnew_driving_style_title" = "Novo estilo de mapa para a condução";
 
@@ -1948,14 +1948,75 @@
 
 "yandex_taxi_title" = "Yandex.Taxi";
 
-"learn_more" = "Learn more";
+"learn_more" = "Saber mais";
 
-"exit" = "Exit";
+"exit" = "Sair";
 
-"routing_add_start_point" = "Add start point to plan a route.";
+"routing_add_start_point" = "Adicionar ponto de partida para planear uma rota.";
 
-"routing_add_finish_point" = "Add finish to plan a route.";
+"routing_add_finish_point" = "Adicionar final da viagem para planear uma rota.";
 
-"use" = "Use";
+"onboarding_welcome_message" = "Mapas com navegação curva a curva grátis, rápidos, detalhados e totalmente offline.";
 
-"viator_title" = "Attractions and tours";
+/* нужно как-то выделять документы, чтобы привязать позже ссылки. */
+"onboarding_welcome_agree" = "Ao lançar a aplicação, o utilizador concorda com os Termos de Utilização e a Política de Privacidade.";
+
+"button_accept_and_continue" = "Aceitar e continuar";
+
+"button_learn_more" = "Saber mais";
+
+"onboarding_not_storage_permission_title" = "Conceder acesso";
+
+"onboarding_not_storage_permission_message" = "Alterar configurações de permissões no seu dispositivo. Necessário acesso ao armazenamento para utilizar o MAPS.ME.";
+
+"button_exit" = "Sair";
+
+"onboarding_learn_more_title" = "O MAPS.ME precisa de aceder a";
+
+/* Default permission's name from Android settings. */
+"onboarding_learn_more_storage" = "Armazenamento";
+
+"onboarding_learn_more_storage_message" = "Para guardar e utilizar mapas transferidos offline e guardar favoritos.";
+
+/* Default permission's name from Android settings. */
+"onboarding_location" = "Localização";
+
+"onboarding_learn_more_location_message" = "Para ver locais e o trânsito perto de si e utilizar a navegação.";
+
+"onboarding_learn_more_save_maps_message" = "Também pode alterar o destino para os mapas transferidos nas configurações.";
+
+"settings_device_memory" = "Memória do dispositivo";
+
+"settings_card_memory" = "Memória do cartão";
+
+"settings_storage_available" = "%s disponível";
+
+"toast_location_permission_denied" = "Permissão de localização da aplicação não autorizada";
+
+"place_page_viator_title" = "Atrações e passeios";
+
+"planning_route_need_finish" = "Adicionar destino para planear uma rota.";
+
+"planning_route_need_start" = "Adicionar ponto de partida para planear uma rota.";
+
+"button_use" = "Utilizar";
+
+"planning_route_manage_route" = "Gerir rota";
+
+"button_plan" = "Planear";
+
+"button_add" = "Adicionar";
+
+"placepage_remove_stop" = "Remover";
+
+"planning_route_remove_title" = "Arraste aqui para remover";
+
+"dialog_change_start_point_message" = "Substituir ponto de partida pela localização atual?";
+
+"button_replace" = "Substituir";
+
+"placepage_add_stop" = "Adicionar paragem";
+
+"whatsnew_intermediate_point_title" = "Paragem de adicional";
+
+"whatsnew_intermediate_point_message" = "Planeie uma rota com um ponto intermédio.";
