--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -266,7 +266,7 @@
 "settings" = "Настройки";
 
 /* Header of settings activity where user defines storage path */
-"maps_storage" = "Хранилище карт";
+"maps_storage" = "Сохранять карты в";
 
 /* Detailed description of Maps Storage settings button */
 "maps_storage_summary" = "Выберите место, где будут храниться загруженные карты";
@@ -537,7 +537,7 @@
 
 "duration_1_day" = "1 сутки";
 
-"recent_track_help_text" = "Внимание: активация этой функции может привести к повышенному расходу батареи.";
+"recent_track_help_text" = "Эта функция позволяет записывать пройденный путь за определенный период времени и видеть его на карте. Внимание: активация этой функции может привести к повышенному расходу батареи. Записанный трек будет удален с карты по истечении этого срока.";
 
 "pref_track_ios_caption" = "История пути покажет недавно пройденный маршрут.";
 
@@ -1336,9 +1336,9 @@
 
 "onboarding_location_message" = "Чтобы пользоваться навигацией и другими функциями приложения, нам необходим доступ к вашей геопозиции.";
 
-"onboarding_permissions_title" = "Allow MAPS.ME access to storage and location";
+"onboarding_permissions_title" = "Предоставьте MAPS.ME доступ к памяти и местоположению.";
 
-"onboarding_permissions_message" = "So you can download maps, see places and traffic near you and use navigation.";
+"onboarding_permissions_message" = "Чтобы скачивать карты, смотреть места вокруг вас и пользоваться навигацией.";
 
 "onboarding_storage_permissions_title" = "Grant access";
 
@@ -1356,7 +1356,7 @@
 
 "onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
 
-"onboarding_welcome_title" = "Welcome to MAPS.ME";
+"onboarding_welcome_title" = "Добро пожаловать в MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
 
@@ -1646,7 +1646,7 @@
 "blog" = "Блог";
 
 /* Hint near allow statictics checkbox */
-"allow_statistics_hint" = "Сбор статистики помогает нам совершенствовать приложение.";
+"allow_statistics_hint" = "Сбор анонимной статистики помогает нам совершенствовать приложение.";
 
 "general_settings" = "Общие настройки";
 
@@ -1877,9 +1877,9 @@
 
 "whatsnew_waypoints_message" = "Нажмите на объекты, чтобы включить их в маршрут.";
 
-"whatsnew_viator_title" = "Viator title";
+"whatsnew_viator_title" = "Забронируйте экскурсию";
 
-"whatsnew_viator_message" = "Viator message";
+"whatsnew_viator_message" = "Выбирайте популярные экскурсии в туристических городах мира.";
 
 "whatsnew_driving_style_title" = "Новый автомобильный стиль карт";
 
@@ -1952,10 +1952,71 @@
 
 "exit" = "Выход";
 
-"routing_add_start_point" = "Add start point to plan a route.";
+"routing_add_start_point" = "Добавьте стартовую точку, чтобы построить маршрут.";
 
-"routing_add_finish_point" = "Add finish to plan a route.";
+"routing_add_finish_point" = "Добавьте конечную точку, чтобы построить маршрут.";
 
-"use" = "Use";
+"onboarding_welcome_message" = "Бесплатные, быстрые, подробные и полностью автономные карты с пошаговой навигацией.";
 
-"viator_title" = "Attractions and tours";
+/* нужно как-то выделять документы, чтобы привязать позже ссылки. */
+"onboarding_welcome_agree" = "Запуская приложение, вы соглашаетесь с условиями использования и политикой конфиденциальности.";
+
+"button_accept_and_continue" = "Принять и продолжить";
+
+"button_learn_more" = "Подробнее";
+
+"onboarding_not_storage_permission_title" = "Предоставьте доступ";
+
+"onboarding_not_storage_permission_message" = "Предоставьте MAPS.ME доступ к памяти в настройках вашего устройства, иначе использовать MAPS.ME будет невозможно.";
+
+"button_exit" = "Выход";
+
+"onboarding_learn_more_title" = "MAPS.ME нужен доступ к";
+
+/* Default permission's name from Android settings. */
+"onboarding_learn_more_storage" = "Память";
+
+"onboarding_learn_more_storage_message" = "Чтобы сохранять и использовать скачанные карты и сохранять метки.";
+
+/* Default permission's name from Android settings. */
+"onboarding_location" = "Местоположение";
+
+"onboarding_learn_more_location_message" = "Чтобы смотреть места и пробки рядом с вами и пользоваться навигацией.";
+
+"onboarding_learn_more_save_maps_message" = "В настройках можно изменить место хранения загруженных карт.";
+
+"settings_device_memory" = "Память устроства";
+
+"settings_card_memory" = "Карта памяти";
+
+"settings_storage_available" = "%s доступно";
+
+"toast_location_permission_denied" = "Определение местоположения запрещено";
+
+"place_page_viator_title" = "Экскурсии и достопримечательности";
+
+"planning_route_need_finish" = "Для планирования маршрута добавьте финишную точку.";
+
+"planning_route_need_start" = "Для планирования маршрута добавьте стартовую точку.";
+
+"button_use" = "Использовать";
+
+"planning_route_manage_route" = "Изменить маршрут";
+
+"button_plan" = "Построить";
+
+"button_add" = "Добавить";
+
+"placepage_remove_stop" = "Удалить";
+
+"planning_route_remove_title" = "Перетяните сюда, чтобы удалить";
+
+"dialog_change_start_point_message" = "Заменить стартовую точку на текущее местоположение?";
+
+"button_replace" = "Заменить";
+
+"placepage_add_stop" = "Заехать";
+
+"whatsnew_intermediate_point_title" = "Промежуточная остановка";
+
+"whatsnew_intermediate_point_message" = "Планируйте маршрут с дополнительной остановкой.";
