--- a/iphone/Maps/LocalizedStrings/th.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/th.lproj/Localizable.strings
@@ -266,7 +266,7 @@
 "settings" = "การตั้งค่า";
 
 /* Header of settings activity where user defines storage path */
-"maps_storage" = "พื้นที่จัดเก็บแผนที่";
+"maps_storage" = "บันทึกแผนที่ไปยัง";
 
 /* Detailed description of Maps Storage settings button */
 "maps_storage_summary" = "เลือกสถานที่ที่ต้องการดาวน์โหลดใช้แผนที่";
@@ -537,7 +537,7 @@
 
 "duration_1_day" = "1 วัน";
 
-"recent_track_help_text" = "โปรดทราบ: การเปิดใช้งานฟังก์ชันนี้จะส่งผลให้มีการใช้งานแบตเตอรี่เพิ่มขึ้น";
+"recent_track_help_text" = "ช่วยให้คุณบันทึกเส้นทางที่คุณเดินทางในช่วงระยะเวลาหนึ่งแล้วดูบนแผนที่ได้ โปรดทราบว่า: การเปิดใช้งานฟังก์ชั่นนี้จะทำให้การใช้งานแบตเตอรี่เพิ่มมากขึ้น การติดตามจะถูกเอาออกไปโดยอัตโนมัติจากแผนที่หลังจากผ่านช่วงเวลาที่กำหนด";
 
 "pref_track_ios_caption" = "เส้นทางล่าสุดแสดงให้เห็นถึงเส้นทางที่เดินทางแล้วของคุณ";
 
@@ -1336,9 +1336,9 @@
 
 "onboarding_location_message" = "เพื่อใช้การนำทางและฟีเจอร์อื่น ๆ เราต้องการเข้าถึงตำแหน่งทางภูมิศาสตร์ของคุณ";
 
-"onboarding_permissions_title" = "Allow MAPS.ME access to storage and location";
+"onboarding_permissions_title" = "อนุญาตให้ MAPS.ME เข้าถึงที่เก็บข้อมูลและตำแหน่งที่ตั้ง";
 
-"onboarding_permissions_message" = "So you can download maps, see places and traffic near you and use navigation.";
+"onboarding_permissions_message" = "เพื่อที่คุณจะได้สามารถดาวน์โหลดแผนที่ ดูสถานที่ต่าง ๆ และการจราจรที่อยู่ใกล้ ๆ คุณแล้วใช้งานการนำทางได้";
 
 "onboarding_storage_permissions_title" = "Grant access";
 
@@ -1356,7 +1356,7 @@
 
 "onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
 
-"onboarding_welcome_title" = "Welcome to MAPS.ME";
+"onboarding_welcome_title" = "ยินดีต้อนรับสู่ MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
 
@@ -1646,7 +1646,7 @@
 "blog" = "บล็อก";
 
 /* Hint near allow statictics checkbox */
-"allow_statistics_hint" = "การรวบรวมสถิติการใช้งานจะช่วยให้เราปรับปรุงแอปได้ดียิ่งขึ้น";
+"allow_statistics_hint" = "การเก็บรวบรวมสถิติการใช้งานแบบไม่ระบุตัวตนจะช่วยให้เราปรับปรุงแอปได้ดียิ่งขึ้น";
 
 "general_settings" = "การตั้งค่าทั่วไป";
 
@@ -1877,9 +1877,9 @@
 
 "whatsnew_waypoints_message" = "แตะสถานที่เพื่อเพิ่มจุดกำหนดเข้าไปยังเส้นทางของคุณ";
 
-"whatsnew_viator_title" = "Viator title";
+"whatsnew_viator_title" = "จองทัวร์";
 
-"whatsnew_viator_message" = "Viator message";
+"whatsnew_viator_message" = "เลือกทัวร์ยอดนิยมในเมืองท่องเที่ยวทั่วโลก";
 
 "whatsnew_driving_style_title" = "แผนที่รูปแบบใหม่สำหรับการขับขี่";
 
@@ -1948,14 +1948,75 @@
 
 "yandex_taxi_title" = "Yandex.Taxi";
 
-"learn_more" = "Learn more";
+"learn_more" = "ศึกษาเพิ่มเติม";
 
-"exit" = "Exit";
+"exit" = "ออก";
 
-"routing_add_start_point" = "Add start point to plan a route.";
+"routing_add_start_point" = "เพิ่มจุดเริ่มต้นเพื่อวางแผนเส้นทาง";
 
-"routing_add_finish_point" = "Add finish to plan a route.";
+"routing_add_finish_point" = "เพิ่มจุดสิ้นสุดเพื่อวางแผนเส้นทาง";
 
-"use" = "Use";
+"onboarding_welcome_message" = "แผนที่ที่ฟรี รวดเร็ว มีรายละเอียด และออฟไลน์พร้อมกับการนำทางแบบทีละขั้นตอน";
 
-"viator_title" = "Attractions and tours";
+/* нужно как-то выделять документы, чтобы привязать позже ссылки. */
+"onboarding_welcome_agree" = "ด้วยการเรียกใช้แอปพลิเคชั่นคุณได้ตกลงต่อเงื่อนไขการใช้งานและนโยบายความเป็นส่วนตัว";
+
+"button_accept_and_continue" = "ตกลงและดำเนินการต่อไป";
+
+"button_learn_more" = "ศึกษาเพิ่มเติม";
+
+"onboarding_not_storage_permission_title" = "ให้สิทธิ์เข้าถึง";
+
+"onboarding_not_storage_permission_message" = "เปลี่ยนการตั้งค่าการให้สิทธิ์ในเครื่องของคุณ จำเป็นต้องได้สิทธิ์การเข้าถึงที่เก็บข้อมูลเพื่อใช้งาน MAPS.ME";
+
+"button_exit" = "ออก";
+
+"onboarding_learn_more_title" = "MAPS.ME จำเป็นต้องได้สิทธิ์การเข้าถึง";
+
+/* Default permission's name from Android settings. */
+"onboarding_learn_more_storage" = "ที่เก็บข้อมูล";
+
+"onboarding_learn_more_storage_message" = "เพื่อบันทึกและใช้งานแผนที่ที่ดาวน์โหลดมาแบบออฟไลน์และบันทึกบุ๊กมาร์ก";
+
+/* Default permission's name from Android settings. */
+"onboarding_location" = "ตำแหน่งที่ตั้ง";
+
+"onboarding_learn_more_location_message" = "เพื่อดูสถานที่ต่าง ๆ และการจราจรที่อยู่ใกล้ ๆ คุณแล้วใช้งานการนำทาง";
+
+"onboarding_learn_more_save_maps_message" = "คุณสามารถเปลี่ยนจุดหมายปลายทางสำหรับแผนที่ที่ดาวน์โหลดได้ในการตั้งค่า";
+
+"settings_device_memory" = "หน่วยความจำเครื่อง";
+
+"settings_card_memory" = "หน่วยความจำการ์ด";
+
+"settings_storage_available" = "เหลือให้ใช้ได้ %s";
+
+"toast_location_permission_denied" = "สิทธิ์ตำแหน่งที่ตั้งของแอปถูกปฏิเสธ";
+
+"place_page_viator_title" = "สถานที่ท่องเที่ยวและทัวร์";
+
+"planning_route_need_finish" = "เพิ่มจุดหมายปลายทางเพื่อวางแผนเส้นทาง";
+
+"planning_route_need_start" = "เพิ่มจุดเริ่มต้นเพื่อวางแผนเส้นทาง";
+
+"button_use" = "ใช้";
+
+"planning_route_manage_route" = "จัดการเส้นทาง";
+
+"button_plan" = "วางแผน";
+
+"button_add" = "เพิ่ม";
+
+"placepage_remove_stop" = "เอาออก";
+
+"planning_route_remove_title" = "ลากมาที่นี่เพื่อเอาออก";
+
+"dialog_change_start_point_message" = "แทนที่จุดเริ่มต้นไปยังตำแหน่งปัจจุบันหรือไม่?";
+
+"button_replace" = "แทนที่";
+
+"placepage_add_stop" = "เพิ่มจุดแวะพัก";
+
+"whatsnew_intermediate_point_title" = "จุดแวะพักเพิ่มเติม";
+
+"whatsnew_intermediate_point_message" = "วางแผนเส้นทางด้วยจุดแวะพักระหว่างทาง";
