--- a/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
@@ -266,7 +266,7 @@
 "settings" = "Thiết lập";
 
 /* Header of settings activity where user defines storage path */
-"maps_storage" = "Lưu trữ bản đồ";
+"maps_storage" = "Lưu bản đồ vào";
 
 /* Detailed description of Maps Storage settings button */
 "maps_storage_summary" = "Chọn vị trí nơi bản đồ sẽ được tải về";
@@ -537,7 +537,7 @@
 
 "duration_1_day" = "1 ngày";
 
-"recent_track_help_text" = "Xin lưu ý: kích hoạt chức năng này làm tăng việc sử dụng pin.";
+"recent_track_help_text" = "Chức năng này cho phép bạn ghi lại đường đi trong một khoảng thời gian nhất định và xem nó trên bản đồ. Xin lưu ý: việc kích hoạt chức năng này sẽ tăng mức sử dụng pin. Đường đi sẽ tự động bị xóa khỏi bản đồ sau khi kết thúc khoảng thời gian nói trên.";
 
 "pref_track_ios_caption" = "Chức năng theo dấu gần đây hiển thị các đường bạn đã đi.";
 
@@ -1336,9 +1336,9 @@
 
 "onboarding_location_message" = "Để sử dụng tính năng dẫn đường và các tính năng khác, chúng tôi cần truy cập vị trí địa lý của bạn.";
 
-"onboarding_permissions_title" = "Allow MAPS.ME access to storage and location";
+"onboarding_permissions_title" = "Cho phép MAPS.ME truy cập ổ lưu trữ và vị trí";
 
-"onboarding_permissions_message" = "So you can download maps, see places and traffic near you and use navigation.";
+"onboarding_permissions_message" = "Để bạn có thể tải về các bản đồ, xem các địa điểm và lưu lượng giao thông gần bạn và sử dụng điều hướng.";
 
 "onboarding_storage_permissions_title" = "Grant access";
 
@@ -1356,7 +1356,7 @@
 
 "onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
 
-"onboarding_welcome_title" = "Welcome to MAPS.ME";
+"onboarding_welcome_title" = "Chào mừng đến với MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
 
@@ -1646,7 +1646,7 @@
 "blog" = "Blog";
 
 /* Hint near allow statictics checkbox */
-"allow_statistics_hint" = "Việc thu thập số liệu sử dụng giúp chúng tôi cải thiện ứng dụng.";
+"allow_statistics_hint" = "Việc thu thập số liệu sử dụng ẩn danh giúp chúng tôi cải thiện ứng dụng.";
 
 "general_settings" = "Thiết lập chung";
 
@@ -1877,9 +1877,9 @@
 
 "whatsnew_waypoints_message" = "Chạm vào các điểm để thêm điểm tọa độ vào lộ trình của bạn.";
 
-"whatsnew_viator_title" = "Viator title";
+"whatsnew_viator_title" = "Đặt tour du lịch";
 
-"whatsnew_viator_message" = "Viator message";
+"whatsnew_viator_message" = "Chọn các tour phổ biến trong các thành phố du lịch trên toàn thế giới.";
 
 "whatsnew_driving_style_title" = "Phong cách Bản đồ Mới cho Lái xe";
 
@@ -1948,14 +1948,75 @@
 
 "yandex_taxi_title" = "Yandex.Taxi";
 
-"learn_more" = "Learn more";
+"learn_more" = "Tìm hiểu thêm";
 
-"exit" = "Exit";
+"exit" = "Lối ra";
 
-"routing_add_start_point" = "Add start point to plan a route.";
+"routing_add_start_point" = "Bổ sung điểm bắt đầu để lập kế hoạch lộ trình.";
 
-"routing_add_finish_point" = "Add finish to plan a route.";
+"routing_add_finish_point" = "Bổ sung điểm kết thúc để lập kế hoạch lộ trình.";
 
-"use" = "Use";
+"onboarding_welcome_message" = "Các bản đồ hoàn toàn ngoại tuyến miễn phí, nhanh và chi tiết với điều hướng qua từng khúc quanh.";
 
-"viator_title" = "Attractions and tours";
+/* нужно как-то выделять документы, чтобы привязать позже ссылки. */
+"onboarding_welcome_agree" = "Thông qua việc khởi chạy ứng dụng, bạn đồng ý với các Điều khoản Sử dụng và Chính sách Riêng tư.";
+
+"button_accept_and_continue" = "Chấp nhận và tiếp tục";
+
+"button_learn_more" = "Tìm hiểu thêm";
+
+"onboarding_not_storage_permission_title" = "Cho phép truy cập";
+
+"onboarding_not_storage_permission_message" = "Thay đổi các cài đặt cho phép trong thiết bị của bạn. Cần quyền truy cập ổ lưu trữ để sử dụng MAPS.ME.";
+
+"button_exit" = "Thoát";
+
+"onboarding_learn_more_title" = "MAPS.ME cần quyền truy cập đến";
+
+/* Default permission's name from Android settings. */
+"onboarding_learn_more_storage" = "Ổ lưu trữ";
+
+"onboarding_learn_more_storage_message" = "Để lưu và sử dụng ngoại tuyến các bản đồ đã tải về và lưu lại các dấu trang.";
+
+/* Default permission's name from Android settings. */
+"onboarding_location" = "Vị trí";
+
+"onboarding_learn_more_location_message" = "Để xem các địa điểm và lưu lượng giao thông gần bạn và sử dụng điều hướng.";
+
+"onboarding_learn_more_save_maps_message" = "Bạn cũng có thể thay đổi điểm lưu trữ các bản đồ đã tải về trong cài đặt.";
+
+"settings_device_memory" = "Bộ nhớ thiết bị";
+
+"settings_card_memory" = "Bộ nhớ thẻ";
+
+"settings_storage_available" = "%s trống";
+
+"toast_location_permission_denied" = "Quyền định vị của ứng dụng bị từ chối";
+
+"place_page_viator_title" = "Các điểm tham quan và du lịch";
+
+"planning_route_need_finish" = "Bổ sung một điểm đến để lập kế hoạch lộ trình.";
+
+"planning_route_need_start" = "Bổ sung điểm bắt đầu để lập kế hoạch lộ trình.";
+
+"button_use" = "Sử dụng";
+
+"planning_route_manage_route" = "Quản lý lộ trình";
+
+"button_plan" = "Kế hoạch";
+
+"button_add" = "Thêm";
+
+"placepage_remove_stop" = "Xóa";
+
+"planning_route_remove_title" = "Kéo vào đây để xóa";
+
+"dialog_change_start_point_message" = "Thay điểm bắt đầu cho vị trí hiện tại?";
+
+"button_replace" = "Thay thế";
+
+"placepage_add_stop" = "Thêm điểm dừng";
+
+"whatsnew_intermediate_point_title" = "Điểm dừng bổ sung";
+
+"whatsnew_intermediate_point_message" = "Lập một lộ trình với một điểm trung gian.";
