--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -266,7 +266,7 @@
 "settings" = "設定";
 
 /* Header of settings activity where user defines storage path */
-"maps_storage" = "地圖儲存";
+"maps_storage" = "將地圖儲存至";
 
 /* Detailed description of Maps Storage settings button */
 "maps_storage_summary" = "請選擇下載地圖後要放的位置";
@@ -537,7 +537,7 @@
 
 "duration_1_day" = "1天";
 
-"recent_track_help_text" = "請注意：啟動此功能會導致用電量增加。";
+"recent_track_help_text" = "它可讓您記錄特定期間所行經的路徑，並在地圖上看到該路徑。請注意：啟用此項功能會增加電池使用量。在時間間隔過期後，會從地圖中自動移除行進路線。";
 
 "pref_track_ios_caption" = "近期軌跡顯示您的行進道路。";
 
@@ -1336,9 +1336,9 @@
 
 "onboarding_location_message" = "如要使用導航和其他功能，我們需要能獲取您的地理位置.";
 
-"onboarding_permissions_title" = "Allow MAPS.ME access to storage and location";
+"onboarding_permissions_title" = "允許 MAPS.ME 存儲和定位的權限";
 
-"onboarding_permissions_message" = "So you can download maps, see places and traffic near you and use navigation.";
+"onboarding_permissions_message" = "所以，您可以下載地圖，查看您附近的地點和交通，以及使用導航服務。";
 
 "onboarding_storage_permissions_title" = "Grant access";
 
@@ -1356,7 +1356,7 @@
 
 "onboarding_detail_permissions_storage_path_message" = "You can also change a destination to save downloaded maps.";
 
-"onboarding_welcome_title" = "Welcome to MAPS.ME";
+"onboarding_welcome_title" = "歡迎來到 MAPS.ME";
 
 "onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
 
@@ -1646,7 +1646,7 @@
 "blog" = "部落格";
 
 /* Hint near allow statictics checkbox */
-"allow_statistics_hint" = "收集使用量統計資料有助於我們改善應用程式。";
+"allow_statistics_hint" = "收集匿名使用統計資訊有助於我們改善應用程式。";
 
 "general_settings" = "一般設定";
 
@@ -1877,9 +1877,9 @@
 
 "whatsnew_waypoints_message" = "點按地點，即可向您的路線新增路徑點。";
 
-"whatsnew_viator_title" = "Viator title";
+"whatsnew_viator_title" = "預訂行程";
 
-"whatsnew_viator_message" = "Viator message";
+"whatsnew_viator_message" = "選擇全世界旅遊城市的熱門行程。";
 
 "whatsnew_driving_style_title" = "新的駕駛地圖模式";
 
@@ -1948,14 +1948,75 @@
 
 "yandex_taxi_title" = "Yandex.Taxi";
 
-"learn_more" = "Learn more";
+"learn_more" = "瞭解更多資訊";
 
-"exit" = "Exit";
+"exit" = "退出";
 
-"routing_add_start_point" = "Add start point to plan a route.";
+"routing_add_start_point" = "新增起點以計劃路線。";
 
-"routing_add_finish_point" = "Add finish to plan a route.";
+"routing_add_finish_point" = "新增終點以計劃路線。";
 
-"use" = "Use";
+"onboarding_welcome_message" = "免費、快速、詳盡又全面的地圖，提供逐向導航服務。";
 
-"viator_title" = "Attractions and tours";
+/* нужно как-то выделять документы, чтобы привязать позже ссылки. */
+"onboarding_welcome_agree" = "啟動本應用程式，即表示您同意服務條款和隱私權原則。";
+
+"button_accept_and_continue" = "接受並繼續";
+
+"button_learn_more" = "瞭解更多資訊";
+
+"onboarding_not_storage_permission_title" = "授與存取權";
+
+"onboarding_not_storage_permission_message" = "變更您裝置中的權限設定。需要存儲權限才能使用 MAPS.ME。";
+
+"button_exit" = "退出";
+
+"onboarding_learn_more_title" = "MAPS.ME 需要下列存取權限：";
+
+/* Default permission's name from Android settings. */
+"onboarding_learn_more_storage" = "存儲空間";
+
+"onboarding_learn_more_storage_message" = "儲存和離線使用下載的地圖並儲存書籤。";
+
+/* Default permission's name from Android settings. */
+"onboarding_location" = "位置";
+
+"onboarding_learn_more_location_message" = "查看您附近的地點和交通，以及使用導航服務。";
+
+"onboarding_learn_more_save_maps_message" = "在設定中，您還可變更下載的地圖之目的地。";
+
+"settings_device_memory" = "裝置記憶體";
+
+"settings_card_memory" = "卡記憶體";
+
+"settings_storage_available" = "%s 可用";
+
+"toast_location_permission_denied" = "應用程式地點存取權限被拒絕";
+
+"place_page_viator_title" = "景點和行程";
+
+"planning_route_need_finish" = "新增目的地以計劃路線。";
+
+"planning_route_need_start" = "新增起點以計劃路線。";
+
+"button_use" = "使用";
+
+"planning_route_manage_route" = "管理路線";
+
+"button_plan" = "計畫";
+
+"button_add" = "新增";
+
+"placepage_remove_stop" = "移除";
+
+"planning_route_remove_title" = "在此拖曳以移除";
+
+"dialog_change_start_point_message" = "取代目前位置的起點嗎？";
+
+"button_replace" = "取代";
+
+"placepage_add_stop" = "新增應用程式";
+
+"whatsnew_intermediate_point_title" = "其他站點";
+
+"whatsnew_intermediate_point_message" = "計劃有中途休息站的路線。";
